chore: はてな記事を一括置換

--- a/src/content/blog/20200805234305.md
+++ b/src/content/blog/20200805234305.md
@@ -14,14 +14,14 @@ description: "突然ssh接続でDebianに繋がらなくなったときの対処
 
 IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200805/20200805215246.png
 
-## 記憶喪失の[Debian](http://d.hatena.ne.jp/keyword/Debian)？
+## 記憶喪失のDebian？
 
-3日前くらいに、さくら[VPS](http://d.hatena.ne.jp/keyword/VPS)上の[Debian](http://d.hatena.ne.jp/keyword/Debian)に対して公開鍵の設定しました。  
-設定当初から問題なく公開鍵認証で接続できていたのですが、今日[ssh](http://d.hatena.ne.jp/keyword/ssh)接続を試みると、突然`Permission denied (public key)`と言われてしまいました。<img alt="f:id:ikmbear:20200805215246p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200805/20200805215246.png" title="" height="104" width="1142" />
+3日前くらいに、さくらVPS上のDebianに対して公開鍵の設定しました。  
+設定当初から問題なく公開鍵認証で接続できていたのですが、今日ssh接続を試みると、突然`Permission denied (public key)`と言われてしまいました。 ![f:id:ikmbear:20200805215246p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200805/20200805215246.png) 
 
-何も設定を変えていなかったので、どうしたもんかと。アニメ「一週間フレンズ」しかり、[Debian](http://d.hatena.ne.jp/keyword/Debian)は数日立つと私のことを忘れてしまうのでしょうか。
+何も設定を変えていなかったので、どうしたもんかと。アニメ「一週間フレンズ」しかり、Debianは数日立つと私のことを忘れてしまうのでしょうか。
 
-「[Debian](http://d.hatena.ne.jp/keyword/Debian)！俺だよ！思い出してくれよ！」  
+「Debian！俺だよ！思い出してくれよ！」  
 そう叫んだところで相手はシステム。思いは届きません。一つずつ確認しましょう。
 
 - [記憶喪失のDebian？](#記憶喪失のDebian)
@@ -44,33 +44,33 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200805/2020080
 
 ## 前提
 
-- [ssh](http://d.hatena.ne.jp/keyword/ssh)クライアント：[macOS](http://d.hatena.ne.jp/keyword/macOS) Catalina（10.15.6）
-- 接続先：さくら[VPS](http://d.hatena.ne.jp/keyword/VPS)に構築したDebian10.4
+- sshクライアント：macOS Catalina（10.15.6）
+- 接続先：さくらVPSに構築したDebian10.4
 - 以前は公開鍵認証で問題なく接続できていたが、突然`Permission denied (public key)`により接続できなくなった。
 - 公開鍵認証については、[ssh接続を鍵認証で行う](http://www.tooyama.org/ssh-key.html)を参考に実施済み。つまり
-  - client\_[rsa](http://d.hatena.ne.jp/keyword/rsa)というキーペアを作成
-  - クライアントのキーチェーンには[秘密鍵](http://d.hatena.ne.jp/keyword/%C8%EB%CC%A9%B8%B0)を登録済（`ssh-add -K ~/.ssh/client_rsa`）
-  - [Debian](http://d.hatena.ne.jp/keyword/Debian)側にも公開鍵を登録済
-  - [Debian](http://d.hatena.ne.jp/keyword/Debian)側の[sshd](http://d.hatena.ne.jp/keyword/sshd)\_configは以下の設定がしてある
+  - client\_rsaというキーペアを作成
+  - クライアントのキーチェーンには$1を登録済（`ssh-add -K ~/.ssh/client_rsa`）
+  - Debian側にも公開鍵を登録済
+  - Debian側のsshd\_configは以下の設定がしてある
 
 ```
 PasswordAuthentication  noChallengeResponseAuthentication  noUsePAM  yes
 ```
 
-## 思い出せ[Debian](http://d.hatena.ne.jp/keyword/Debian)編
+## 思い出せDebian編
 
-### 覚えてるか？俺たち、昔はパスワードで[ssh](http://d.hatena.ne.jp/keyword/ssh)接続したりしてさ...
+### 覚えてるか？俺たち、昔はパスワードでssh接続したりしてさ...
 
 - 確認したいこと：原因が公開鍵認証によるものなのかの切り分け
-- 確認方法：[Debian](http://d.hatena.ne.jp/keyword/Debian)側の[sshd](http://d.hatena.ne.jp/keyword/sshd)\_configで`PasswordAuthentication yes`に設定変更する。
-- 確認結果：パスワード認証では問題なく[ssh](http://d.hatena.ne.jp/keyword/ssh)接続できる。
+- 確認方法：Debian側のsshd\_configで`PasswordAuthentication yes`に設定変更する。
+- 確認結果：パスワード認証では問題なくssh接続できる。
 
-[Debian](http://d.hatena.ne.jp/keyword/Debian)「今もパスワード認証できるで」
+Debian「今もパスワード認証できるで」
 
 ### 覚えてるか？この鍵。半分、お前に渡してさ...
 
 - 確認したいこと：公開鍵がちゃんとサーバ側に格納されているかどうかを確認
-- 確認方法：[mac](http://d.hatena.ne.jp/keyword/mac)で作成した公開鍵を確認し、[debian](http://d.hatena.ne.jp/keyword/debian)側のフォルダに配置されているものと比較する。
+- 確認方法：macで作成した公開鍵を確認し、debian側のフォルダに配置されているものと比較する。
   - 具体的には以下の流れでクライアント、サーバでのcat結果を比較。
 
 ```
@@ -79,49 +79,49 @@ PasswordAuthentication  noChallengeResponseAuthentication  noUsePAM  yes
 
 - 確認結果：作成した公開鍵がサーバ側に正しく格納されている。
 
-[Debian](http://d.hatena.ne.jp/keyword/Debian)「今もちゃんと持ってるで、覚えとるで」
+Debian「今もちゃんと持ってるで、覚えとるで」
 
-### なあ[Debian](http://d.hatena.ne.jp/keyword/Debian)、閉ざした心を開いてくれよ...
+### なあDebian、閉ざした心を開いてくれよ...
 
-- 確認したいこと：エラーメッセージにある`Permission Denied`が本当に[パーミッション](http://d.hatena.ne.jp/keyword/%A5%D1%A1%BC%A5%DF%A5%C3%A5%B7%A5%E7%A5%F3)が原因か確認する。
-- 確認方法：クライアント、サーバ側それぞれの.[ssh](http://d.hatena.ne.jp/keyword/ssh)[ディレクト](http://d.hatena.ne.jp/keyword/%A5%C7%A5%A3%A5%EC%A5%AF%A5%C8)リの[パーミッション](http://d.hatena.ne.jp/keyword/%A5%D1%A1%BC%A5%DF%A5%C3%A5%B7%A5%E7%A5%F3)を確認する。
+- 確認したいこと：エラーメッセージにある`Permission Denied`が本当に$1が原因か確認する。
+- 確認方法：クライアント、サーバ側それぞれの.sshsshリのsshを確認する。
 
   - クライアントは700（rwx）
   - サーバ側は600（rw）
 
 - 確認結果：どちらも期待通り。
 
-[Debian](http://d.hatena.ne.jp/keyword/Debian)「心オープンやで〜」
+Debian「心オープンやで〜」
 
-### [Debian](http://d.hatena.ne.jp/keyword/Debian)、お前もしかして...
+### Debian、お前もしかして...
 
-[Debian](http://d.hatena.ne.jp/keyword/Debian)「さっきから好き勝手疑ってくれてますけど」  
-[Debian](http://d.hatena.ne.jp/keyword/Debian)「全然こっちは問題ないですから。」  
-[Debian](http://d.hatena.ne.jp/keyword/Debian)「もうひとつ言っておくと、使用する鍵をちゃんと指定すれば[ssh](http://d.hatena.ne.jp/keyword/ssh)接続できますから！こんな感じで。」
+Debian「さっきから好き勝手疑ってくれてますけど」  
+Debian「全然こっちは問題ないですから。」  
+Debian「もうひとつ言っておくと、使用する鍵をちゃんと指定すればssh接続できますから！こんな感じで。」
 
 ```
 $ ssh -i ~/.ssh/client_rsa -p 3090 YYYYYYYYYYYY@XXX.XX.XX.XXX
 ```
 
-## [Debian](http://d.hatena.ne.jp/keyword/Debian)は覚えていた編
+## Debianは覚えていた編
 
-### 忘れたのはクライアント（[mac](http://d.hatena.ne.jp/keyword/mac)）のキーチェーン
+### 忘れたのはクライアント（mac）のキーチェーン
 
-実は問題があるのは[Debian](http://d.hatena.ne.jp/keyword/Debian)ではなく、キーチェーンの方でした。  
-[macOS](http://d.hatena.ne.jp/keyword/macOS) 10.12 [Sierra](http://d.hatena.ne.jp/keyword/Sierra)以降、キーチェーンが再起動時に読み込まれなくなる仕様となったそうです。
+実は問題があるのはDebianではなく、キーチェーンの方でした。  
+macOS 10.12 Sierra以降、キーチェーンが再起動時に読み込まれなくなる仕様となったそうです。
 
-タイトルに「突然」とありますが、実際には「[mac](http://d.hatena.ne.jp/keyword/mac)の再起動」をトリガーとして本事象が発生します。（事象発生までは[macbook](http://d.hatena.ne.jp/keyword/macbook)をスリープするだけで、再起動していなかったんでしょうね...）
+タイトルに「突然」とありますが、実際には「macの再起動」をトリガーとして本事象が発生します。（事象発生まではmacbookをスリープするだけで、再起動していなかったんでしょうね...）
 
-### キーチェーンに[Debian](http://d.hatena.ne.jp/keyword/Debian)との友情を邪魔させない。
+### キーチェーンにDebianとの友情を邪魔させない。
 
-再度`ssh-add -K ~/.ssh/client_rsa`を実行することで、一時的には繋がるようになりますが、再起動すると、また[ssh](http://d.hatena.ne.jp/keyword/ssh)接続できなくなってしまいます。  
-そのため、恒久対応として\~/.[ssh](http://d.hatena.ne.jp/keyword/ssh)/configに以下の設定を追加します。
+再度`ssh-add -K ~/.ssh/client_rsa`を実行することで、一時的には繋がるようになりますが、再起動すると、またssh接続できなくなってしまいます。  
+そのため、恒久対応として\~/.ssh/configに以下の設定を追加します。
 
 ```
 Host *  UseKeychain yes  AddKeysToAgent yes
 ```
 
-### もっと[Debian](http://d.hatena.ne.jp/keyword/Debian)と仲良くなる
+### もっとDebianと仲良くなる
 
 せっかくconfigの設定をしたので、毎回ポートやipを打たずに済むような設定もしておきます。
 
@@ -135,9 +135,9 @@ Host ikuma-t  HostName XXX.XXX.XX.XX  User ikuma-t  IdentityFile ~/.ssh/client_r
 
 コマンドだけでリモートとやり取りするような部分って、「これ何やってんだ？」「どれチェックしたか忘れた...もう一回しらみ潰しにやり直してみよう」ってことが多いと思います。
 
-今回は[Debian](http://d.hatena.ne.jp/keyword/Debian)が記憶喪失したというストーリーで擬人化して考えましたが、とっつきにくい内容だからこそ、自分で噛み砕いてコミカルにしてみるのはなかなか効果的でした！
+今回はDebianが記憶喪失したというストーリーで擬人化して考えましたが、とっつきにくい内容だからこそ、自分で噛み砕いてコミカルにしてみるのはなかなか効果的でした！
 
-[Debian](http://d.hatena.ne.jp/keyword/Debian)「途中で設定とかストーリー書くの面倒になったでしょ」  
+Debian「途中で設定とかストーリー書くの面倒になったでしょ」  
 私「ファッ！！！」
 
 ## 参考
