--- a/src/content/blog/20200806000514.md
+++ b/src/content/blog/20200806000514.md
@@ -35,7 +35,7 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200728/2020072
 エンジニアとしてのアウトプットブログなのに、3記事目からパンの話だと「こいつエンジニアの卵の化けの皮を被ったパン屋だな」と思われそうです。
 
 一応、高校上がりたての頃は本気でパン屋になろうと思っており、大学入学と同時にチェーンのベーカリーへ。  
-1年間働いた後、「一からパン作りがしたい」という思いから、[フルスクラッチ](http://d.hatena.ne.jp/keyword/%A5%D5%A5%EB%A5%B9%A5%AF%A5%E9%A5%C3%A5%C1)の個人経営ベーカリーに転職（※バイトです）し、大学卒業まで製造〜売り子までやっていました。
+1年間働いた後、「一からパン作りがしたい」という思いから、$1の個人経営ベーカリーに転職（※バイトです）し、大学卒業まで製造〜売り子までやっていました。
 
 1店舗目は出来合いのパン生地を発酵させるだけで、なんか腑に落ちなかったんですよね。  
 自分で仕組みを理解して作り上げるという工程を踏まないと気が済まないみたいです。
@@ -46,14 +46,14 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200728/2020072
 
 ### 今回作るもの
 
-まず今回作るのはこちらのフォカッチャです。大量のバジルと岩塩で味をブーストさせたベストオブ食事パンです。<img alt="f:id:ikmbear:20200728164816p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200728/20200728164816.png" title="" height="900" width="1200" />
+まず今回作るのはこちらのフォカッチャです。大量のバジルと岩塩で味をブーストさせたベストオブ食事パンです。 ![f:id:ikmbear:20200728164816p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200728/20200728164816.png) 
 
 ## レシピ
 
 - 強力粉：300g
 - 塩：5g
 - 砂糖：5g
-- [ドライイースト](http://d.hatena.ne.jp/keyword/%A5%C9%A5%E9%A5%A4%A5%A4%A1%BC%A5%B9%A5%C8)：5g
+- $1：5g
 - オリーブオイル：10g
 - 水：200g
 
@@ -61,7 +61,7 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200728/2020072
 
 ### 混ぜる
 
-<img alt="f:id:ikmbear:20200728165207p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200728/20200728165207.png" title="" height="1200" width="900" />
+ ![f:id:ikmbear:20200728165207p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200728/20200728165207.png) 
 
 まずはひたすら混ぜます。
 
@@ -71,26 +71,26 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200728/2020072
 
 こうしてパン生地を捏ねていると、自分の思い込みの極論ではなくて、ちゃんと現実と向き合って、目的に見合ったやり方を採択することが大事なんだと思い知らされます。
 
-[Excel](http://d.hatena.ne.jp/keyword/Excel)を使うことが悪なんじゃない。システム化の中で[Excel](http://d.hatena.ne.jp/keyword/Excel)の方が費用対効果がいいときだってあるし、[Excel](http://d.hatena.ne.jp/keyword/Excel)にしかないメリットがあるんだとか。何でもかんでも[Excel](http://d.hatena.ne.jp/keyword/Excel)でやろうとするからいけないんだみたいな。
+Excelを使うことが悪なんじゃない。システム化の中でExcelの方が費用対効果がいいときだってあるし、Excelにしかないメリットがあるんだとか。何でもかんでもExcelでやろうとするからいけないんだみたいな。
 
 ### 一次発酵
 
-<img alt="f:id:ikmbear:20200728170248p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200728/20200728170248.png" title="" height="900" width="1200" />写真くらいまとまってきたらラップして一次発酵です。時間は適当。大体勉強しながら作るので、いつのまにかいい大きさになっています（冬場だと気温が低いので発酵しにくいですが）。
+ ![f:id:ikmbear:20200728170248p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200728/20200728170248.png) 写真くらいまとまってきたらラップして一次発酵です。時間は適当。大体勉強しながら作るので、いつのまにかいい大きさになっています（冬場だと気温が低いので発酵しにくいですが）。
 
-この工程も昔は生地にハリツヤが出て、[グルテン](http://d.hatena.ne.jp/keyword/%A5%B0%A5%EB%A5%C6%A5%F3)チェック合格できるくらいまで捏ねていました（画像くらいだと15\~20分くらい捏ねたところです）。市販のパン作りの教科書に書いてあるので、それが正しいと思ってずーっと捏ねていました。
+この工程も昔は生地にハリツヤが出て、$1チェック合格できるくらいまで捏ねていました（画像くらいだと15\~20分くらい捏ねたところです）。市販のパン作りの教科書に書いてあるので、それが正しいと思ってずーっと捏ねていました。
 
 でもこれくらいの捏ね具合でも、発酵を重ねるときれいになって、美味しいパンになるんですよ。
 
 「基本に忠実に、完璧になるまでそこをやるっていうのもいいが、大体把握できたらまずはその先へ行ってみて、各工程・レベルのエッセンスを掴むことこそが大事ではないか」、とパンに言われているような気がしました。
 
-### 二次発酵〜[焼成](http://d.hatena.ne.jp/keyword/%BE%C6%C0%AE)
+### 二次発酵〜$1
 
-<img alt="f:id:ikmbear:20200728171359p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200728/20200728171359.png" title="" height="900" width="1200" />一次発酵後です。あとはガスを抜いてもう一回発酵し、型に入れます（以降の工程の写真は撮り忘れました）。
+ ![f:id:ikmbear:20200728171359p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200728/20200728171359.png) 一次発酵後です。あとはガスを抜いてもう一回発酵し、型に入れます（以降の工程の写真は撮り忘れました）。
 
-<img alt="f:id:ikmbear:20200805235743j:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200805/20200805235743.jpg" title="" height="1200" width="900" />焼きに入れる前に、塩とバジルとオリーブオイルを振りかけます。  
+ ![f:id:ikmbear:20200805235743j:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200805/20200805235743.jpg) 焼きに入れる前に、塩とバジルとオリーブオイルを振りかけます。  
 塩はうまいものがいいです。これは実家の母が知り合いからもらったいい塩です。めちゃうまいです（馬鹿みたいな文章だなあ）。
 
-<img alt="f:id:ikmbear:20200728164816p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200728/20200728164816.png" title="" height="900" width="1200" />
+ ![f:id:ikmbear:20200728164816p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200728/20200728164816.png) 
 
 ## 感想
 
