--- a/src/content/blog/20200815155129.md
+++ b/src/content/blog/20200815155129.md
@@ -20,29 +20,29 @@ RubyMine小ネタです。
 
 本日チェリー本でByebugを覚えました。
 
-「覚えたからって関係ねえ、Byebugを使用せずに私はRubyMineで[デバッグ](http://d.hatena.ne.jp/keyword/%A5%C7%A5%D0%A5%C3%A5%B0)をやるんだ」と[デバッグ](http://d.hatena.ne.jp/keyword/%A5%C7%A5%D0%A5%C3%A5%B0)を試みたところ、デバッガが異常終了してしまいました。これは罰当たりか...？
+「覚えたからって関係ねえ、Byebugを使用せずに私はRubyMineで$1をやるんだ」と$1を試みたところ、デバッガが異常終了してしまいました。これは罰当たりか...？
 
 ```
 Uncaught exception: cannot load such file -- ./lib/effects    /Users/username/RubymineProjects/ruby-book/lib/word_synth.rb:1:in `require'    /Users/username/RubymineProjects/ruby-book/lib/word_synth.rb:1:in `<top (required)>'
 ```
 
-## 原因は[デバッグ](http://d.hatena.ne.jp/keyword/%A5%C7%A5%D0%A5%C3%A5%B0)の構成
+## 原因は$1の構成
 
-[コマンドライン](http://d.hatena.ne.jp/keyword/%A5%B3%A5%DE%A5%F3%A5%C9%A5%E9%A5%A4%A5%F3)から通常通り実行していた際は、以下のrequireで問題なく動いていました。
+$1から通常通り実行していた際は、以下のrequireで問題なく動いていました。
 
 ```
 require './lib/effects'
 ```
 
-これを以下のように書き換えてあげるとうまく実行できるようになります。つまりシェルからの実行時と、Rubymineのデバッガでは[相対パス](http://d.hatena.ne.jp/keyword/%C1%EA%C2%D0%A5%D1%A5%B9)の基準点がずれているわけです。
+これを以下のように書き換えてあげるとうまく実行できるようになります。つまりシェルからの実行時と、Rubymineのデバッガでは$1の基準点がずれているわけです。
 
 ```
 require './effects'
 ```
 
-ではカレント[ディレクト](http://d.hatena.ne.jp/keyword/%A5%C7%A5%A3%A5%EC%A5%AF%A5%C8)リがどこで決まっているかというと、画面右上のプルダウンをクリックすると展開されるので...<img alt="f:id:ikmbear:20200815154953p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200815/20200815154953.png" title="" height="217" width="1200" />その中のEdit Configrationsを押すと、各ファイルごとの設定をみることができます。<img alt="f:id:ikmbear:20200815154609p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200815/20200815154609.png" title="" height="485" width="1200" />
+ではカレント$1リがどこで決まっているかというと、画面右上のプルダウンをクリックすると展開されるので... ![f:id:ikmbear:20200815154953p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200815/20200815154953.png) その中のEdit Configrationsを押すと、各ファイルごとの設定をみることができます。 ![f:id:ikmbear:20200815154609p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200815/20200815154609.png) 
 
-上図内赤枠の「Working Directory」が[相対パス](http://d.hatena.ne.jp/keyword/%C1%EA%C2%D0%A5%D1%A5%B9)の基準点になるので、
+上図内赤枠の「Working Directory」が$1の基準点になるので、
 
 - このパスを書き換える
 
@@ -50,6 +50,6 @@ require './effects'
 
 - 実行ファイルのrequireのパスを書き換える
 
-ことで、[デバッグ](http://d.hatena.ne.jp/keyword/%A5%C7%A5%D0%A5%C3%A5%B0)実行が正しくできるようになりました。
+ことで、$1実行が正しくできるようになりました。
 
-以[上小](http://d.hatena.ne.jp/keyword/%BE%E5%BE%AE)ネタでした〜。
+以$1ネタでした〜。
