--- a/src/content/blog/20200913185817.md
+++ b/src/content/blog/20200913185817.md
@@ -14,48 +14,48 @@ description: "今月のフォカッチャ〜ドライトマトのフォカッチ
 
 IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913185635.jpg
 
-## 今月のフォカッチャは[ドライトマト](http://d.hatena.ne.jp/keyword/%A5%C9%A5%E9%A5%A4%A5%C8%A5%DE%A5%C8)のフォカッチャです
+## 今月のフォカッチャは$1のフォカッチャです
 
-同じレシピだとブログネタとして代わり映えしないので、今月は[ドライトマト](http://d.hatena.ne.jp/keyword/%A5%C9%A5%E9%A5%A4%A5%C8%A5%DE%A5%C8)のフォカッチャです。
+同じレシピだとブログネタとして代わり映えしないので、今月は$1のフォカッチャです。
 
-...って言っても、この前のフォカッチャに[ドライトマト](http://d.hatena.ne.jp/keyword/%A5%C9%A5%E9%A5%A4%A5%C8%A5%DE%A5%C8)のっけただけですが。（そしてしれっとまた月を跨いでいる）
+...って言っても、この前のフォカッチャに$1のっけただけですが。（そしてしれっとまた月を跨いでいる）
 
 ## レシピ
 
-今日は昼も夜もフォカッチャを食べたいというリク[エス](http://d.hatena.ne.jp/keyword/%A5%A8%A5%B9)トにお応えして、いつもの2倍量で作ります
+今日は昼も夜もフォカッチャを食べたいというリク$1トにお応えして、いつもの2倍量で作ります
 
 - パン生地
 
   - 強力粉：600g
   - 塩：10g
   - 砂糖：10g
-  - [ドライイースト](http://d.hatena.ne.jp/keyword/%A5%C9%A5%E9%A5%A4%A5%A4%A1%BC%A5%B9%A5%C8)：10g
+  - $1：10g
   - オリーブオイル：20g
   - 水：400g
 
 - トッピング
-  - [ドライトマト](http://d.hatena.ne.jp/keyword/%A5%C9%A5%E9%A5%A4%A5%C8%A5%DE%A5%C8)（オイル漬け）：適量
-  - バジル・[オレガノ](http://d.hatena.ne.jp/keyword/%A5%AA%A5%EC%A5%AC%A5%CE)：適量
+  - $1（オイル漬け）：適量
+  - バジル・$1：適量
   - 岩塩：好きなだけ。適量
 
 ## 環境
 
 - 室温：26℃
-- オーブン：[SHARP](http://d.hatena.ne.jp/keyword/SHARP)　RE-S70A
+- オーブン：SHARP　RE-S70A
 - ゴムベラ：セリアで買った100円のゴムベラ
-- ボウル：[柳宗理](http://d.hatena.ne.jp/keyword/%CC%F8%BD%A1%CD%FD)のボウル（もらいもの）
+- ボウル：$1のボウル（もらいもの）
 
 ## 作り方
 
 ### 混ぜる
 
-<img alt="f:id:ikmbear:20200913181603j:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913181603.jpg" title="" height="800" width="1200" />
+ ![f:id:ikmbear:20200913181603j:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913181603.jpg) 
 
 前回同様、ひたすら混ぜます。今回と前回の相違点は「作る量が倍である」という点です。
 
 倍だからといって、混ぜる時間が倍になるとか、混ぜる労力が倍になるということはありませんが、量が増えたことで気にしなければならない点が出てきます。それは「だま」ができやすくなることです。
 
-[ドライイースト](http://d.hatena.ne.jp/keyword/%A5%C9%A5%E9%A5%A4%A5%A4%A1%BC%A5%B9%A5%C8)がかなりだまになりやすく、またオリーブオイルも水を挟まないで直接粉にかけるとそこでだまができます。
+$1がかなりだまになりやすく、またオリーブオイルも水を挟まないで直接粉にかけるとそこでだまができます。
 
 というわけで、
 
@@ -70,39 +70,39 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/2020091
 
 「大規模になることで、小規模では見えなかった問題点が顕在化し、それに対して先人たちは知恵を残し、その恩恵を後に続く人が享受する。お前はただ利益のみを享受するのではなく、その背景をしっかり把握しなさい」と、またパン生地に教えられました。
 
-<img alt="f:id:ikmbear:20200913181722j:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913181722.jpg" title="" height="800" width="1200" />
+ ![f:id:ikmbear:20200913181722j:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913181722.jpg) 
 
 とか言いながらオリーブオイル直接入れました。教え忘れちゃいました。忘れちゃいましたけど何か？（真顔）
 
 ### 一次発酵
 
-<img alt="f:id:ikmbear:20200913181801j:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913181801.jpg" title="" height="800" width="1200" />いい感じに混ぜ終わったら、ラップをして1hくらい発酵させます。<img alt="f:id:ikmbear:20200913181828j:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913181828.jpg" title="" height="800" width="1200" />気温が高いとサクサク発酵してくれるので楽チンですね。
+ ![f:id:ikmbear:20200913181801j:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913181801.jpg) いい感じに混ぜ終わったら、ラップをして1hくらい発酵させます。 ![f:id:ikmbear:20200913181828j:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913181828.jpg) 気温が高いとサクサク発酵してくれるので楽チンですね。
 
 ## 分割・ベンチタイム
 
-<img alt="f:id:ikmbear:20200913181901j:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913181901.jpg" title="" height="800" width="1200" />今回は倍量なので、生地を2つに分割し、あとで成形しやすいように軽くまるめておきます
+ ![f:id:ikmbear:20200913181901j:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913181901.jpg) 今回は倍量なので、生地を2つに分割し、あとで成形しやすいように軽くまるめておきます
 
 （あまり丸めすぎると、生地がしまってしまい成形までに時間がかかるので、軽めにします）。
 
-### 成形・二次発酵・[焼成](http://d.hatena.ne.jp/keyword/%BE%C6%C0%AE)
+### 成形・二次発酵・$1
 
-<img alt="f:id:ikmbear:20200913181923j:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913181923.jpg" title="" height="800" width="1200" />
+ ![f:id:ikmbear:20200913181923j:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913181923.jpg) 
 
 まるめた生地を麺棒で伸ばし、型にはいる大きさにします。
 
-<img alt="f:id:ikmbear:20200913181947j:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913181947.jpg" title="" height="800" width="1200" />フォカッチャは[焼成](http://d.hatena.ne.jp/keyword/%BE%C6%C0%AE)中の破裂を防ぐために生地にくぼみをぷすぷすと刺すのですが、今回はこのくぼみに[ドライトマト](http://d.hatena.ne.jp/keyword/%A5%C9%A5%E9%A5%A4%A5%C8%A5%DE%A5%C8)をつっこんでいきます。
+ ![f:id:ikmbear:20200913181947j:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913181947.jpg) フォカッチャは$1中の破裂を防ぐために生地にくぼみをぷすぷすと刺すのですが、今回はこのくぼみに$1をつっこんでいきます。
 
-ちなみに今回のトッピングはこの人たちです。[ドライトマト](http://d.hatena.ne.jp/keyword/%A5%C9%A5%E9%A5%A4%A5%C8%A5%DE%A5%C8)はカルディで買いました（700\~800円くらい）。こいつのせいで原価爆上がりです。<img alt="f:id:ikmbear:20200913182017j:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913182017.jpg" title="" height="800" width="1200" />
+ちなみに今回のトッピングはこの人たちです。$1はカルディで買いました（700\~800円くらい）。こいつのせいで原価爆上がりです。 ![f:id:ikmbear:20200913182017j:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913182017.jpg) 
 
 トッピング量ですが、以下のような基準でふりかけています。
 
-- [ドライトマト](http://d.hatena.ne.jp/keyword/%A5%C9%A5%E9%A5%A4%A5%C8%A5%DE%A5%C8)：フォカッチャに開いた穴の分だけ。穴を開ければ開けるほど、家庭に穴が開く。
-- バジル・[オレガノ](http://d.hatena.ne.jp/keyword/%A5%AA%A5%EC%A5%AC%A5%CE)：好きなだけ。[ドライトマト](http://d.hatena.ne.jp/keyword/%A5%C9%A5%E9%A5%A4%A5%C8%A5%DE%A5%C8)自体が割と[オレガノ](http://d.hatena.ne.jp/keyword/%A5%AA%A5%EC%A5%AC%A5%CE)風味だったので、今回はバジルの方が多め。
+- $1：フォカッチャに開いた穴の分だけ。穴を開ければ開けるほど、家庭に穴が開く。
+- バジル・$1：好きなだけ。$1自体が割と$1風味だったので、今回はバジルの方が多め。
 - 岩塩：好きなだけ。目玉焼きに醤油とかソースをかける感覚で、「このパンにちょっと塩降るならこんなもんかな〜」と自分が思う量。
 
-焼いている間も生地は膨らむので、生半可な気持ちで[ドライトマト](http://d.hatena.ne.jp/keyword/%A5%C9%A5%E9%A5%A4%A5%C8%A5%DE%A5%C8)をつっこむと、焼き上がりに[ドライトマト](http://d.hatena.ne.jp/keyword/%A5%C9%A5%E9%A5%A4%A5%C8%A5%DE%A5%C8)が浮いてしまいます。なので「これはお前のためにやっているんだよ」という気持ちで、容赦無く[ドライトマト](http://d.hatena.ne.jp/keyword/%A5%C9%A5%E9%A5%A4%A5%C8%A5%DE%A5%C8)をめり込ませます。<img alt="f:id:ikmbear:20200913182050j:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913182050.jpg" title="" height="800" width="1200" />
+焼いている間も生地は膨らむので、生半可な気持ちで$1をつっこむと、焼き上がりに$1が浮いてしまいます。なので「これはお前のためにやっているんだよ」という気持ちで、容赦無く$1をめり込ませます。 ![f:id:ikmbear:20200913182050j:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913182050.jpg) 
 
-生地を二等分したので、片方は[ドライトマト](http://d.hatena.ne.jp/keyword/%A5%C9%A5%E9%A5%A4%A5%C8%A5%DE%A5%C8)、もう片方はさらにチーズをトッピングして[焼成](http://d.hatena.ne.jp/keyword/%BE%C6%C0%AE)です（チーズの方は撮り忘れました）。<img alt="f:id:ikmbear:20200913185635j:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913185635.jpg" title="" height="800" width="1200" />
+生地を二等分したので、片方は$1、もう片方はさらにチーズをトッピングして$1です（チーズの方は撮り忘れました）。 ![f:id:ikmbear:20200913185635j:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913185635.jpg) 
 
 焼きは250℃に余熱したオーブンで20分前後（家庭用オーブンは癖が強く火力も弱いので、適宜調整してください）です。
 
@@ -117,12 +117,12 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/2020091
 
 ## 完成
 
-<img alt="f:id:ikmbear:20200913185658j:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913185658.jpg" title="" height="1200" width="800" />うわ〜うまい！うますぎる〜！ただのピザ〜〜〜
+ ![f:id:ikmbear:20200913185658j:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200913/20200913185658.jpg) うわ〜うまい！うますぎる〜！ただのピザ〜〜〜
 
 ## 感想
 
 もう焼く前からすでに美味いという確信があったのですが、実際にめちゃめちゃおいしかったです。
 
-オイル漬けの[ドライトマト](http://d.hatena.ne.jp/keyword/%A5%C9%A5%E9%A5%A4%A5%C8%A5%DE%A5%C8)の場合、惜しみなくそのオイルをパンに塗っておくと、トマトがない部分もトマトの味がしていいなあと思いました。
+オイル漬けの$1の場合、惜しみなくそのオイルをパンに塗っておくと、トマトがない部分もトマトの味がしていいなあと思いました。
 
 次回は何フォカッチャにするかな〜。
