--- a/src/content/blog/20201218064703.md
+++ b/src/content/blog/20201218064703.md
@@ -19,7 +19,7 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201217/2020121
 
 昨日の記事はharukusさんの「[初めてのオンラインLT会の準備と感想 - harukus ぶろぐ](https://harukus.hatenablog.com/entry/2020/12/17/104632)」でした!
 
-さて、憧れの[アドベントカレンダー](http://d.hatena.ne.jp/keyword/%A5%A2%A5%C9%A5%D9%A5%F3%A5%C8%A5%AB%A5%EC%A5%F3%A5%C0%A1%BC)人生初挑戦ということで、せっかくなので技術系の記事を書く予定でした。
+さて、憧れの$1人生初挑戦ということで、せっかくなので技術系の記事を書く予定でした。
 
 ![f:id:ikmbear:20201216194903p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201216/20201216194903.png)
 
@@ -49,14 +49,14 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201217/2020121
 
 ## アウトプットをさまたげるのはプライドだ
 
-### [アドベントカレンダー](http://d.hatena.ne.jp/keyword/%A5%A2%A5%C9%A5%D9%A5%F3%A5%C8%A5%AB%A5%EC%A5%F3%A5%C0%A1%BC)全然かけないの刃 無限列車編
+### $1全然かけないの刃 無限列車編
 
-繰り返しになりますが、アウトプットって難しいですよね。7月から[フィヨルド](http://d.hatena.ne.jp/keyword/%A5%D5%A5%A3%A5%E8%A5%EB%A5%C9)ブートキャンプに参加して以来、何度もその難しさに悩まされています。なぜアウトプットに苦しむのか。私の場合「自分のプライドが邪魔をしているから」です。
+繰り返しになりますが、アウトプットって難しいですよね。7月から$1ブートキャンプに参加して以来、何度もその難しさに悩まされています。なぜアウトプットに苦しむのか。私の場合「自分のプライドが邪魔をしているから」です。
 
-この記事も書くまでに何回もアウトラインが変わり、いよいよ公開前日の帰りの電車で書いています😭ここ3日間くらい[アドベントカレンダー](http://d.hatena.ne.jp/keyword/%A5%A2%A5%C9%A5%D9%A5%F3%A5%C8%A5%AB%A5%EC%A5%F3%A5%C0%A1%BC)の記事を書いては消し、書いては消しとしていますが、その時に頭に浮かんでいることはこんなことです。
+この記事も書くまでに何回もアウトラインが変わり、いよいよ公開前日の帰りの電車で書いています😭ここ3日間くらい$1の記事を書いては消し、書いては消しとしていますが、その時に頭に浮かんでいることはこんなことです。
 
-![f:id:ikmbear:20201217200737p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201217/20201217200737.png)アニメ版とpixiv大百科で[鬼滅の刃](http://d.hatena.ne.jp/keyword/%B5%B4%CC%C7%A4%CE%BF%CF)のストーリー全話補完した[男の叫び](http://d.hatena.ne.jp/keyword/%C3%CB%A4%CE%B6%AB%A4%D3)「あぁ〜〜、[フィヨルド](http://d.hatena.ne.jp/keyword/%A5%D5%A5%A3%A5%E8%A5%EB%A5%C9)生の記事みんないい話・ためになる話すぎるよぉ。僕そんなん書けないよぉ、たんじろぉ」  
-「まぁ12月入ってから残業もめちゃくちゃ多かったしぃ、引越しもしてたしぃ、[wifi](http://d.hatena.ne.jp/keyword/wifi)も通ってないしぃ、しょうがないよね、うん仕方ない」
+![f:id:ikmbear:20201217200737p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201217/20201217200737.png)アニメ版とpixiv大百科で$1のストーリー全話補完した$1「あぁ〜〜、$1生の記事みんないい話・ためになる話すぎるよぉ。僕そんなん書けないよぉ、たんじろぉ」  
+「まぁ12月入ってから残業もめちゃくちゃ多かったしぃ、引越しもしてたしぃ、wifiも通ってないしぃ、しょうがないよね、うん仕方ない」
 
 つまり私はこんなことを思ってしまっているんです。
 
@@ -68,7 +68,7 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201217/2020121
 
 ### 一時はプライドを克服するも...
 
-そんな私が初めてプライドと向き合ったのは、[フィヨルド](http://d.hatena.ne.jp/keyword/%A5%D5%A5%A3%A5%E8%A5%EB%A5%C9)ブートキャンプに入って26日目、2020年8月6日のこと。[ios](http://d.hatena.ne.jp/keyword/ios)エンジニアの堤さんのこの動画をみました。
+そんな私が初めてプライドと向き合ったのは、iosブートキャンプに入って26日目、2020年8月6日のこと。iosエンジニアの堤さんのこの動画をみました。
 
 [![Embedded YouTube video](https://img.youtube.com/vi/j7ifT8S5pN0/0.jpg)](https://www.youtube.com/watch?v=j7ifT8S5pN0)
 
@@ -87,9 +87,9 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201217/2020121
 
 ## 「こだわりは手の速さを手に入れてから少しずつ」
 
-話は変わりますが、私は「[SHIROBAKO](http://d.hatena.ne.jp/keyword/SHIROBAKO)」というアニメ制作が舞台のアニメが大好きです。アニメは5周 + 音声だけで2周するほど好きです（まだ映画版は見られていない）。
+話は変わりますが、私は「SHIROBAKO」というアニメ制作が舞台のアニメが大好きです。アニメは5周 + 音声だけで2周するほど好きです（まだ映画版は見られていない）。
 
-それはさておき、アウトプットの話をすると[SHIROBAKO](http://d.hatena.ne.jp/keyword/SHIROBAKO)のキャラの1人、ベテランアニメータである杉江さんの言葉がいつもよぎるのでご紹介します。
+それはさておき、アウトプットの話をするとSHIROBAKOのキャラの1人、ベテランアニメータである杉江さんの言葉がいつもよぎるのでご紹介します。
 
 ![f:id:ikmbear:20201217195637p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201217/20201217195637.png)
 
@@ -125,11 +125,11 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201217/2020121
 
 というメリットがあります。具体的には次のようなツール・やり方をしています。
 
-### [Scrapbox](http://d.hatena.ne.jp/keyword/Scrapbox)を使ってみる
+### Scrapboxを使ってみる
 
-![f:id:ikmbear:20201217203951p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201217/20201217203951.png)「[寺田心](http://d.hatena.ne.jp/keyword/%BB%FB%C5%C4%BF%B4)と[宮本浩次](http://d.hatena.ne.jp/keyword/%B5%DC%CB%DC%B9%C0%BC%A1)って似てない？」と思ってから、[寺田心](http://d.hatena.ne.jp/keyword/%BB%FB%C5%C4%BF%B4)の面影を感じる芸能人を集めている[ikuma-t-kokoro](https://scrapbox.io/ikuma-t/)
+![f:id:ikmbear:20201217203951p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201217/20201217203951.png)「$1と$1って似てない？」と思ってから、$1の面影を感じる芸能人を集めている[ikuma-t-kokoro](https://scrapbox.io/ikuma-t/)
 
-[フィヨルド](http://d.hatena.ne.jp/keyword/%A5%D5%A5%A3%A5%E8%A5%EB%A5%C9)ブートキャンプの中でも、結構使われている方が多かったので、自分も使ってみたのですが、すぐにかけるのが非常に心地いいです。
+$1ブートキャンプの中でも、結構使われている方が多かったので、自分も使ってみたのですが、すぐにかけるのが非常に心地いいです。
 
 - 記法はあるが、基本WYSIWIGで書ける
 - 下書きと公開の区別がない
@@ -137,7 +137,7 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201217/2020121
 
 個人的には下書きモードがないというのが結構ポイントです。書いたものがそのまま曝け出されるので、ブログだったら「う〜ん仕上がりがいまいちだから、後悔はやめよう」と思っていたところが、自然と「まずは書いて公開しよう」というフローに変わりました。
 
-[はてなブログ](http://d.hatena.ne.jp/keyword/%A4%CF%A4%C6%A4%CA%A5%D6%A5%ED%A5%B0)や[twitter](http://d.hatena.ne.jp/keyword/twitter)のように「誰がみた」「誰がいいねした」というのがないのも、プライドに惑わされずアウトプットするポイントです。
+twitterやtwitterのように「誰がみた」「誰がいいねした」というのがないのも、プライドに惑わされずアウトプットするポイントです。
 
 ### Stockrを使ってみる
 
@@ -152,13 +152,13 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201217/2020121
 
 そこで最近では[Stockr | 気づきの習慣化をサポートするアプリ](https://stockr.bldt.jp/)を使用しています。
 
-これは[twitter](http://d.hatena.ne.jp/keyword/twitter)みたいに振り返りをつぶやくと、毎朝7時に過去の振り返りをリマインドしてくれるだけのアプリです（どこにも共有されません）。
+これはtwitterみたいに振り返りをつぶやくと、毎朝7時に過去の振り返りをリマインドしてくれるだけのアプリです（どこにも共有されません）。
 
 こちらもシンプル故に、「振り返りのアウトプットをたくさんして、力に変えていく」という本来の目的を達成しやすくなりました。
 
 ### 日報は最低15分、感想（と書ければやったこと）があればいいことにする
 
-一時期勉強する時間はあったけど、[フィヨルド](http://d.hatena.ne.jp/keyword/%A5%D5%A5%A3%A5%E8%A5%EB%A5%C9)ブートキャンプの学習記録=日報がとだえた時期がありました。
+一時期勉強する時間はあったけど、$1ブートキャンプの学習記録=日報がとだえた時期がありました。
 
 ![f:id:ikmbear:20201218064529p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201218/20201218064529.png)真ん中の青くない部分がそう
 
@@ -172,7 +172,7 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201217/2020121
 # ✔︎やったこと# ✎学習したこと# ☞次にやること# ♨︎感想・余談
 ```
 
-今も昔もテンプレートとしては上記のようなものを使用していますが、当時は「これを全て埋めないと提出できない！」と勝手に[足切り](http://d.hatena.ne.jp/keyword/%C2%AD%C0%DA%A4%EA)ラインを作ってしまっていました。
+今も昔もテンプレートとしては上記のようなものを使用していますが、当時は「これを全て埋めないと提出できない！」と勝手に$1ラインを作ってしまっていました。
 
 この日報にメンターの方からは以下のコメントが。
 
@@ -184,9 +184,9 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201217/2020121
 # ✔︎やったこと# ♨︎感想・余談
 ```
 
-...とはいいつつも、[フィヨルド](http://d.hatena.ne.jp/keyword/%A5%D5%A5%A3%A5%E8%A5%EB%A5%C9)生の日報ってかなり面白いんですよね。それでついつい「自分も面白いもの・しっかりしたものを書かなければ」と思ってしまうんですが、日報が途絶えて思うことは「やっぱり日報を継続して書いているときは調子がいい」ということ。だからこそ、ちょっとしたことだけでも、まずは書くことが大切なんじゃないかな〜と思います。
+...とはいいつつも、$1生の日報ってかなり面白いんですよね。それでついつい「自分も面白いもの・しっかりしたものを書かなければ」と思ってしまうんですが、日報が途絶えて思うことは「やっぱり日報を継続して書いているときは調子がいい」ということ。だからこそ、ちょっとしたことだけでも、まずは書くことが大切なんじゃないかな〜と思います。
 
-日報については、今回の[アドベントカレンダー](http://d.hatena.ne.jp/keyword/%A5%A2%A5%C9%A5%D9%A5%F3%A5%C8%A5%AB%A5%EC%A5%F3%A5%C0%A1%BC)で佐野さんが書かれているので、こちらもどうぞ！[日報を書こう! (日報自動投稿プログラムもあるヨ!) - 佐野 真潮(Mashio Sano)の個人日記](https://mashoo1101.hatenablog.com/entry/2020/12/14/084200)
+日報については、今回の$1で佐野さんが書かれているので、こちらもどうぞ！[日報を書こう! (日報自動投稿プログラムもあるヨ!) - 佐野 真潮(Mashio Sano)の個人日記](https://mashoo1101.hatenablog.com/entry/2020/12/14/084200)
 
 ## やっぱり「出ない神本より出る糞本」
 
