--- a/src/content/blog/20201228210412.md
+++ b/src/content/blog/20201228210412.md
@@ -14,9 +14,9 @@ description: "Rubocop実行時のparserに関する警告を解消する"
 
 ## 環境
 
-- [macOS](http://d.hatena.ne.jp/keyword/macOS):BigSur
+- macOS:BigSur
 - RubyMine:2020.3
-- [Ruby](http://d.hatena.ne.jp/keyword/Ruby):2.7.1
+- Ruby:2.7.1
 - Rubocop:1.4.2
 - parser:2.7.2.0
 
@@ -30,10 +30,10 @@ warning: parser/current is loading parser/ruby27, which recognizeswarning: 2.7.2
 
 please seeのURLに飛んで、いろいろ調べてみたところ
 
-- Rubocopは[Ruby](http://d.hatena.ne.jp/keyword/Ruby)の[構文解析](http://d.hatena.ne.jp/keyword/%B9%BD%CA%B8%B2%F2%C0%CF)に[whitequark/parser: A Ruby parser.](https://github.com/whitequark/parser)を使用する
-- [Ruby](http://d.hatena.ne.jp/keyword/Ruby)はパッチリリースごとに[構文解析](http://d.hatena.ne.jp/keyword/%B9%BD%CA%B8%B2%F2%C0%CF)へのバックポート[\*1](#f-51de6e0e)を盛り込むことがある。[構文解析](http://d.hatena.ne.jp/keyword/%B9%BD%CA%B8%B2%F2%C0%CF)を担うparserはこれに対応する必要がある。
+- RubocopはRubyのRubyに[whitequark/parser: A Ruby parser.](https://github.com/whitequark/parser)を使用する
+- RubyはパッチリリースごとにRubyへのバックポート[\*1](#f-51de6e0e)を盛り込むことがある。Rubyを担うparserはこれに対応する必要がある。
 - 上記に対応するため、parserは1つのバージョンで複数のマイナーバージョンをサポートできないそう（parser2.7.2.0では、Ruby2.7.2のみをサポートしていて、2.7.1をサポートしていない）
-- そのため、[Ruby](http://d.hatena.ne.jp/keyword/Ruby)のバージョン（2.7.1）とparserの対応しているバージョン（2.7.2）が異なると警告が出る。
+- そのため、Rubyのバージョン（2.7.1）とparserの対応しているバージョン（2.7.2）が異なると警告が出る。
 
 今回事象が発生している環境では特にRubocopのバージョンもしていなかったので、parserも最新版が入っているみたいでした。
 
@@ -48,7 +48,7 @@ please seeのURLに飛んで、いろいろ調べてみたところ
 
 ## parserのバージョンを下げる
 
-[Ruby](http://d.hatena.ne.jp/keyword/Ruby)に合わせてparserを2.7.2.0未満に下げることでエラーを解消します。
+Rubyに合わせてparserを2.7.2.0未満に下げることでエラーを解消します。
 
 1.Gemfileにparserのバージョンを追記する
 
@@ -74,8 +74,8 @@ please seeのURLに飛んで、いろいろ調べてみたところ
 
 [\* Bump 2.7 branch to 2.7.2 by koic · Pull Request #748 · whitequark/parser](https://github.com/whitequark/parser/pull/748)
 
-> [Ruby](http://d.hatena.ne.jp/keyword/Ruby) 2.7.2 has been released.[https://www.ruby-lang.org/en/news/2020/10/02/ruby-2-7-2-released/](https://www.ruby-lang.org/en/news/2020/10/02/ruby-2-7-2-released/)  
-> It seems like no changes have been made to ruby27.y where Parser gem should be changed (backported).[ruby](http://d.hatena.ne.jp/keyword/ruby)/[ruby](http://d.hatena.ne.jp/keyword/ruby)@v2_7_1...v2_7_2
+> Ruby 2.7.2 has been released.[https://www.ruby-lang.org/en/news/2020/10/02/ruby-2-7-2-released/](https://www.ruby-lang.org/en/news/2020/10/02/ruby-2-7-2-released/)  
+> It seems like no changes have been made to ruby27.y where Parser gem should be changed (backported).ruby/ruby@v2_7_1...v2_7_2
 
 特にRuby2.7.1と2.7.2の間に変化はないっぽいので、今回はこの警告を無視してもRubocopの実行結果は変わらなそうでした。
 
@@ -93,7 +93,7 @@ Unfortunately, Ruby MRI often changes syntax in patchlevel versions. This has ha
 
 ### 単語・語句・構文
 
-- `Ruby MRI`：CRuby（Matz' [Ruby](http://d.hatena.ne.jp/keyword/Ruby) Implementation）
+- `Ruby MRI`：CRuby（Matz' Ruby Implementation）
 - `backport`：あるバージョンのソフトウェアに追加した機能やセキュリティ対策などの改良を、それより以前のバージョンのソフトウェアにも取り込むこと。
 - `c5013452`、`04bb9d6b`：いずれも`parse.y`におけるバックポートの例。
 - `lexer quirks`：lexerが字句解析。字句解析の特徴といったところ？
@@ -102,15 +102,15 @@ Unfortunately, Ruby MRI often changes syntax in patchlevel versions. This has ha
 
 - `parse.y`
   - [ruby/parse.y at master · ruby/ruby](https://github.com/ruby/ruby/blob/master/parse.y)
-  - `parse.y`は[Ruby](http://d.hatena.ne.jp/keyword/Ruby)の[構文解析](http://d.hatena.ne.jp/keyword/%B9%BD%CA%B8%B2%F2%C0%CF)のルールを記述したもの（記述されたPGは、字句解析→[構文解析](http://d.hatena.ne.jp/keyword/%B9%BD%CA%B8%B2%F2%C0%CF)の順に解析される）
-  - [yacc](http://d.hatena.ne.jp/keyword/yacc)は、パーサを自動生成するツール。 `.y`という拡張子のファイルを入力とし、 Cのソースを出力する。
+  - `parse.y`はRubyのRubyのルールを記述したもの（記述されたPGは、字句解析→Rubyの順に解析される）
+  - yaccは、パーサを自動生成するツール。 `.y`という拡張子のファイルを入力とし、 Cのソースを出力する。
   - [Ruby開発者・まつもとゆきひろ氏の新言語「Streem」のソースコードを読んでみよう！ ～ 文法と構造を規定する「lex.l」と「parse.y」 (1/4)：CodeZine（コードジン）](https://codezine.jp/article/detail/8409)
   - [プログラミング言語を作る/yaccとlex](http://kmaebashi.com/programmer/devlang/yacclex.html)
 
 ### 疑問点と思考過程
 
 - 中の人が言及している記事があった：[Parser gem のバージョニングと RuboCop の TargetRubyVersion - koicの日記](https://koic.hatenablog.com/entry/parser-gem-and-target-ruby-version-of-rubocop)
-- [Ruby](http://d.hatena.ne.jp/keyword/Ruby)のバージョンアップごとにrubocopの[構文解析](http://d.hatena.ne.jp/keyword/%B9%BD%CA%B8%B2%F2%C0%CF)を担うparserもそれに追随するが、各バージョンのparserは複数のパッチバージョン (2.7 系, 2.6 系, 2.5 系, 2.4 系, 2.3 系...) のみ。
+- RubyのバージョンアップごとにrubocopのRubyを担うparserもそれに追随するが、各バージョンのparserは複数のパッチバージョン (2.7 系, 2.6 系, 2.5 系, 2.4 系, 2.3 系...) のみ。
 - `Gemfile.lock`を確認してみると`parser (2.7.2.0)`、つまりは2.7系では2.7.2のみに対応しているので、今回のような警告が発生している。
   - [\* Bump 2.7 branch to 2.7.2 by koic · Pull Request #748 · whitequark/parser](https://github.com/whitequark/parser/pull/748)で言及されているように、特に影響はなさそう。
 
