--- a/src/content/blog/20201231162656.md
+++ b/src/content/blog/20201231162656.md
@@ -14,11 +14,11 @@ description: "年始に向けてブログのデザインを整える"
 
 IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/20201231150902.png
 
-<img alt="f:id:ikmbear:20201231150902p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/20201231150902.png" title="" height="675" width="1200" />
+ ![f:id:ikmbear:20201231150902p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/20201231150902.png) 
 
 みなさん年末いかがお過ごしでしょうか。私は職場の勉強会の資料を作りたくなくて、現実逃避しています。
 
-さて今日で一年も終わり。来年はたくさんブログを書けるように、[はてなブログ](http://d.hatena.ne.jp/keyword/%A4%CF%A4%C6%A4%CA%A5%D6%A5%ED%A5%B0)のカスタム[CSS](http://d.hatena.ne.jp/keyword/CSS)を利用してブログのデザインを変更してみました。
+さて今日で一年も終わり。来年はたくさんブログを書けるように、CSSのカスタムCSSを利用してブログのデザインを変更してみました。
 
 大した変更ではありませんが、地味にハマったところを自分への備忘録として書き残しておきたいと思います。
 
@@ -38,21 +38,21 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/2020123
 
 - [おわりに](#おわりに)
 
-## カスタム[CSS](http://d.hatena.ne.jp/keyword/CSS)の使い方
+## カスタムCSSの使い方
 
-カスタム[CSS](http://d.hatena.ne.jp/keyword/CSS)を開くには、まず[はてなブログ](http://d.hatena.ne.jp/keyword/%A4%CF%A4%C6%A4%CA%A5%D6%A5%ED%A5%B0)の右上に表示されている「デザイン」メニューを選択します。
+カスタムCSSを開くには、まずCSSの右上に表示されている「デザイン」メニューを選択します。
 
-<img alt="f:id:ikmbear:20201231151440p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/20201231151440.png" title="" height="366" width="477" />
+ ![f:id:ikmbear:20201231151440p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/20201231151440.png) 
 
 次に、表示されたデザインメニューのサイドバーから「カスタマイズ」を選択します。
 
-<img alt="f:id:ikmbear:20201231151639p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/20201231151639.png" title="" height="674" width="783" />
+ ![f:id:ikmbear:20201231151639p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/20201231151639.png) 
 
-カスタマイズタブにある「カスタム[CSS](http://d.hatena.ne.jp/keyword/CSS)」の欄に[CSS](http://d.hatena.ne.jp/keyword/CSS)を書いていくことで、デザインが適用されます。
+カスタマイズタブにある「カスタムCSS」の欄にCSSを書いていくことで、デザインが適用されます。
 
-<img alt="f:id:ikmbear:20201231151724p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/20201231151724.png" title="" height="725" width="321" />
+ ![f:id:ikmbear:20201231151724p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/20201231151724.png) 
 
-フォームからフォーカスが外れるとプレビューが更新され、画面上部の「変更を保存する」ボタンを押すことでブログに[CSS](http://d.hatena.ne.jp/keyword/CSS)が反映されます。カスタム[CSS](http://d.hatena.ne.jp/keyword/CSS)の使い方は以上です。
+フォームからフォーカスが外れるとプレビューが更新され、画面上部の「変更を保存する」ボタンを押すことでブログにCSSが反映されます。カスタムCSSの使い方は以上です。
 
 ## 変更点（ざっくり）
 
@@ -60,7 +60,7 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/2020123
 
 ### 記事全体
 
-<img alt="f:id:ikmbear:20201231152541p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/20201231152541.png" title="" height="437" width="718" />
+ ![f:id:ikmbear:20201231152541p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/20201231152541.png) 
 
 - 囲んで影つけて、各アイテムごとのタイトル文字を太くしました。
 
@@ -70,7 +70,7 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/2020123
 
 ### 目次
 
-<img alt="f:id:ikmbear:20201231161001p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/20201231161001.png" title="" height="374" width="663" />
+ ![f:id:ikmbear:20201231161001p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/20201231161001.png) 
 
 - noteっぽくしました
 - 「◆目次」を追加しました
@@ -81,7 +81,7 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/2020123
 
 ### コードブロック
 
-<img alt="f:id:ikmbear:20201231152655p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/20201231152655.png" title="" height="158" width="672" />
+ ![f:id:ikmbear:20201231152655p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/20201231152655.png) 
 
 - 背景を黒にしました
 
@@ -91,7 +91,7 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/2020123
 
 ### 引用ブロック
 
-<img alt="f:id:ikmbear:20201231152726p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/20201231152726.png" title="" height="199" width="668" />
+ ![f:id:ikmbear:20201231152726p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/20201231152726.png) 
 
 - 背景色をグレーに変更して、文字色も薄くしました。
 - 全体的に余白を大きく取っています
@@ -102,7 +102,7 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/2020123
 
 ### サイドバーのアイテム
 
-<img alt="f:id:ikmbear:20201231152435p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/20201231152435.png" title="" height="516" width="255" />
+ ![f:id:ikmbear:20201231152435p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/20201231152435.png) 
 
 - 囲んで影つけて、各アイテムごとのタイトル文字を太くしました。
 
@@ -114,24 +114,24 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/2020123
 
 ### メディアクエリが適用されない
 
-記事全体について、修正初期段階では[スマホ](http://d.hatena.ne.jp/keyword/%A5%B9%A5%DE%A5%DB)で見ると少し幅が狭かったです。
+記事全体について、修正初期段階では$1で見ると少し幅が狭かったです。
 
-> ブログの[CSS](http://d.hatena.ne.jp/keyword/CSS)少しいじった。PCは良さげだけど、[スマホ](http://d.hatena.ne.jp/keyword/%A5%B9%A5%DE%A5%DB)だともっと画面いっぱいに広げた方が読みやすそう。  
+> ブログのCSS少しいじった。PCは良さげだけど、CSSだともっと画面いっぱいに広げた方が読みやすそう。  
 > 暇な時変えよう [pic.twitter.com/GB2l3QTyOa](https://t.co/GB2l3QTyOa)
 >
 > — Ikuma_t (@ikumatdkr) [2020年12月31日](https://twitter.com/ikumatdkr/status/1344492755905433601?ref_src=twsrc%5Etfw)
 
-メディアクエリで[スマホ](http://d.hatena.ne.jp/keyword/%A5%B9%A5%DE%A5%DB)の場合だけpaddingを広げようとしたのですが、なぜか適用されませんでした。
+メディアクエリで$1の場合だけpaddingを広げようとしたのですが、なぜか適用されませんでした。
 
 ```
 /* ミスっていた時のCSS * //* スマホ用 */@media screen and  (max-width: 559px){#container {    padding: 10px}#wrapper {    padding: 10px 10px;}}#wrapper {    box-shadow: 0 2px 4px rgba(67,133,187,.1);    padding: 20px 30px;    border-radius: 12px;    background-color: #fdfdfd;}
 ```
 
-これは[CSS](http://d.hatena.ne.jp/keyword/CSS)の書き順の問題だったようで、メディアクエリーの箇所を最後に適用するようにしたら、正しく反映されました。This is「カスケードスタイル」...
+これはCSSの書き順の問題だったようで、メディアクエリーの箇所を最後に適用するようにしたら、正しく反映されました。This is「カスケードスタイル」...
 
-### 1階層目のリストにだけ、[CSS](http://d.hatena.ne.jp/keyword/CSS)を適用する[セレクタ](http://d.hatena.ne.jp/keyword/%A5%BB%A5%EC%A5%AF%A5%BF)
+### 1階層目のリストにだけ、CSSを適用するCSS
 
-<img alt="f:id:ikmbear:20201231161526p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/20201231161526.png" title="" height="370" width="668" />
+ ![f:id:ikmbear:20201231161526p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20201231/20201231161526.png) 
 
 目次部分はすべて順序付きリストで構成されているので、単純に`li`指定だとすべてのアイテムに装飾が施されてしまいます。
 
