--- a/src/content/blog/20210116142332.md
+++ b/src/content/blog/20210116142332.md
@@ -29,22 +29,22 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20210116/2021011
 
 アロマもいいですが、これは食えるところがいいですね。
 
-## [ジャスミンティ](http://d.hatena.ne.jp/keyword/%A5%B8%A5%E3%A5%B9%A5%DF%A5%F3%A5%C6%A5%A3)ー
+## $1ー
 
 ![f:id:ikmbear:20210116140117p:plain:w260:h250](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20210116/20210116140117.png)
 
 [ジャスミン茶　600ml | セブンプレミアム公式 セブンプレミアム向上委員会](https://7premium.jp/product/search/detail?id=88)
 
 これはオフィス勤務時によく買っているやつです。  
-シナモンと被りますが、こちらも[ジャスミン](http://d.hatena.ne.jp/keyword/%A5%B8%A5%E3%A5%B9%A5%DF%A5%F3)の香りでリフレッシュ！飲んだ後にさっぱりするのもポイントですね〜。
+シナモンと被りますが、こちらも$1の香りでリフレッシュ！飲んだ後にさっぱりするのもポイントですね〜。
 
 ![f:id:ikmbear:20210116140542p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20210116/20210116140542.png)
 
 少し前からパッケージにでかでかと「茶」の文字が主張するようになりました。  
 私にはなぜかコムギに見えます。
 
-コンビニで買える[ジャスミンティ](http://d.hatena.ne.jp/keyword/%A5%B8%A5%E3%A5%B9%A5%DF%A5%F3%A5%C6%A5%A3)ーとしては、ファミマの[ジャスミン](http://d.hatena.ne.jp/keyword/%A5%B8%A5%E3%A5%B9%A5%DF%A5%F3)ミルク[ティー](http://d.hatena.ne.jp/keyword/%A5%C6%A5%A3%A1%BC)というのもおすすめだったのですが、今はもう売っていないようです。  
-（代わりに烏龍ミルク[ティー](http://d.hatena.ne.jp/keyword/%A5%C6%A5%A3%A1%BC)が出ていました。[伊藤園　タリーズ　烏龍ミルクティー](https://www.family.co.jp/goods/drink/4222217.html)）
+コンビニで買える$1ーとしては、ファミマの$1ミルク$1というのもおすすめだったのですが、今はもう売っていないようです。  
+（代わりに烏龍ミルク$1が出ていました。[伊藤園　タリーズ　烏龍ミルクティー](https://www.family.co.jp/goods/drink/4222217.html)）
 
 ## 肩のストレッチ
 
@@ -54,7 +54,7 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20210116/2021011
 
 肩こり予防、血流改善に効いてそうです。
 
-たまに[Tarzan](http://d.hatena.ne.jp/keyword/Tarzan)を立ち読みして、「オフィスでできるストレッチ」みたいな特集をみるんですが、静まりかえったオフィスで大仰なストレッチをするのは無理+ストレッチ自体が思い出せないというのがほとんど。
+たまにTarzanを立ち読みして、「オフィスでできるストレッチ」みたいな特集をみるんですが、静まりかえったオフィスで大仰なストレッチをするのは無理+ストレッチ自体が思い出せないというのがほとんど。
 
 その点このストレッチは、腕の部分だけで、スペースを取らず、しかも慣れ親しんだ動きでできるので非常にいいです。
 
