--- a/src/content/blog/20210809102000.md
+++ b/src/content/blog/20210809102000.md
@@ -12,9 +12,8 @@ tags:
 description: "ブログをGatsbyjsに移行.... しかけてやめました"
 ---
 
-IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20210809/20210809101914.png
 
-<img alt="f:id:ikmbear:20210809101914p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20210809/20210809101914.png" title="" height="630" width="1200" />
+ ![f:id:ikmbear:20210809101914p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20210809/20210809101914.png) 
 
 ## Gatsbyjsでブログを作ってみました。
 
@@ -27,15 +26,15 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20210809/2021080
 
 > [ikuma-t.work](https://ikuma-t.work/)
 
-[JavaScript](http://d.hatena.ne.jp/keyword/JavaScript)はほとんど触ったことなかったので（もちろんReactも）、表記の仕方にだいぶ苦戦しましたが、なんとか形にはなりました。
+JavaScriptはほとんど触ったことなかったので（もちろんReactも）、表記の仕方にだいぶ苦戦しましたが、なんとか形にはなりました。
 
-## [SEO](http://d.hatena.ne.jp/keyword/SEO)が貧弱すぎるので、しばらくは[はてな](http://d.hatena.ne.jp/keyword/%A4%CF%A4%C6%A4%CA)継続
+## SEOが貧弱すぎるので、しばらくははてな継続
 
-[独自ドメイン](http://d.hatena.ne.jp/keyword/%C6%C8%BC%AB%A5%C9%A5%E1%A5%A4%A5%F3)を取得して公開してみたはいいんですが、びっくりするほど検索に引っかからないです。
+独自ドメインを取得して公開してみたはいいんですが、びっくりするほど検索に引っかからないです。
 
 今回ネットで検索してみて初めて分かったんですが、世の中には結構な数の「ikuma」さんがいました🐻なので「ikuma-t ブログ」なんて大きなキーワード検索しても辿りつかないわけです。
 
-必要最低限のmetaタグは設定こそすれど、[SEO](http://d.hatena.ne.jp/keyword/SEO)についてはいろいろと考えることが多そうなので、一旦メインブログはこの[はてなブログ](http://d.hatena.ne.jp/keyword/%A4%CF%A4%C6%A4%CA%A5%D6%A5%ED%A5%B0)で継続していくつもりです。（どちらも[markdown](http://d.hatena.ne.jp/keyword/markdown)形式で記述できるので、しばらくは両方に同時投稿するかもです）。
+必要最低限のmetaタグは設定こそすれど、SEOについてはいろいろと考えることが多そうなので、一旦メインブログはこのはてなブログで継続していくつもりです。（どちらもmarkdown形式で記述できるので、しばらくは両方に同時投稿するかもです）。
 
 <iframe src="https://hatenablog-parts.com/embed?url=https%3A%2F%2Fikuma-t.work%2Fpost%2Fgatsbyjs-blog%2F" title="ブログをGatsbyjsに移行しました" class="embed-card embed-webcard" scrolling="no" frameborder="0" style="display: block; width: 100%; height: 155px; max-width: 500px; margin: 10px 0px;"></iframe>
 
@@ -48,16 +47,16 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20210809/2021080
 ### よかったこと
 
 - 「Gatsbyjs使いたい！」という気持ちに一区切りついた
-- [JavaScript](http://d.hatena.ne.jp/keyword/JavaScript)への耐性が少しついた（ブログ作るために、少しJS Primerとかかじったので）
+- JavaScriptへの耐性が少しついた（ブログ作るために、少しJS Primerとかかじったので）
 - 自分でデザインを考えられるので自由度が恐ろしく高い。
-- HTML、[CSS](http://d.hatena.ne.jp/keyword/CSS)の復習ができる
-- ブログサービスではなかった、デプロイ、[ドメイン](http://d.hatena.ne.jp/keyword/%A5%C9%A5%E1%A5%A4%A5%F3)取得、meta設定などを体験することができた
+- HTML、CSSの復習ができる
+- ブログサービスではなかった、デプロイ、ドメイン取得、meta設定などを体験することができた
 
 ### 微妙だったこと
 
-- [タグ機能](http://d.hatena.ne.jp/keyword/%A5%BF%A5%B0%B5%A1%C7%BD)とか、[Twitter](http://d.hatena.ne.jp/keyword/Twitter)用カード設定とか、ブログで必要そうなことも基本的には自前でやらないといけない
-- [SEO](http://d.hatena.ne.jp/keyword/SEO)対策を自分でやらないといけない（これは[はてな](http://d.hatena.ne.jp/keyword/%A4%CF%A4%C6%A4%CA)でも同じだとは思いますが、もっと根本的なところからという意味で）
-- 絶妙に情報が少ないので（自分は[CMS](http://d.hatena.ne.jp/keyword/CMS)にContentfulを使用していますが、こちらの情報が少ない）、調べるのに苦労する
+- タグ機能とか、Twitter用カード設定とか、ブログで必要そうなことも基本的には自前でやらないといけない
+- SEO対策を自分でやらないといけない（これははてなでも同じだとは思いますが、もっと根本的なところからという意味で）
+- 絶妙に情報が少ないので（自分はCMSにContentfulを使用していますが、こちらの情報が少ない）、調べるのに苦労する
 
 ## おわりに
 
