--- a/src/content/blog/202110151634273489.md
+++ b/src/content/blog/202110151634273489.md
@@ -14,7 +14,7 @@ description: "最近のScrapboxの使い方（2021/10）"
 
 IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211015/20211015135059.png
 
-<img alt="f:id:ikmbear:20211015135059p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211015/20211015135059.png" title="" height="630" width="1200" />
+ ![f:id:ikmbear:20211015135059p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211015/20211015135059.png) 
 
 ## 私がいままでやっていたことは「情報の整頓」だった
 
@@ -24,46 +24,46 @@ Notion、Mem、Bear、InkDrop...etc。メモアプリは色々と試してきま
 
 > 整理というのは、ちらばっているものを目ざわりにならないように、きれいにかたづけることではない。それはむしろ整頓というべきであろう。ものごとがよく整理されているというのは、みた目にはともかく、必要なものが必要なときにすぐにとりだせるようになっている、ということだとおもう。
 >
-> 『[知的生産の技術]』（[岩波書店](http://d.hatena.ne.jp/keyword/%B4%E4%C7%C8%BD%F1%C5%B9)刊）[梅棹忠夫](http://d.hatena.ne.jp/keyword/%C7%DF%DC%AA%C3%E9%C9%D7)
+> 『[知的生産の技術]』（$1刊）$1
 
 自分が今までやっていたメモアプリの挫折は、まさにこの「整頓」に執着していることが原因だったのか！  
 新しいメモアプリを使い始めた瞬間は、使い始めた時点での情報、つまりは有限な要素であるため、綺麗に並べられる。  
 しかし情報が増えていくにつれて、使い始めた当初の分類では抑え切れなくなり、整頓が破綻していたのです。
 
-階層型のメモアプリでは、どうしても情報量が増えた際にスケールしなくなると感じ、いままでサブ的に使用していた[Scrapbox](http://d.hatena.ne.jp/keyword/Scrapbox)をメインのメモアプリに据えることにしました。
+階層型のメモアプリでは、どうしても情報量が増えた際にスケールしなくなると感じ、いままでサブ的に使用していたScrapboxをメインのメモアプリに据えることにしました。
 
-## なんでも[Scrapbox](http://d.hatena.ne.jp/keyword/Scrapbox)につっこむ
+## なんでもScrapboxにつっこむ
 
-先に述べた通り、[Scrapbox](http://d.hatena.ne.jp/keyword/Scrapbox)をメインのメモアプリにしたため、なんでもかんでも[Scrapbox](http://d.hatena.ne.jp/keyword/Scrapbox)につっこんでいます。
+先に述べた通り、Scrapboxをメインのメモアプリにしたため、なんでもかんでもScrapboxにつっこんでいます。
 
-現状では、日記ページを毎日作成し、そこからリンクを派生する形で色々なメモを作成しています。<img alt="f:id:ikmbear:20211015133256p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211015/20211015133256.png" title="" height="847" width="959" />
+現状では、日記ページを毎日作成し、そこからリンクを派生する形で色々なメモを作成しています。 ![f:id:ikmbear:20211015133256p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211015/20211015133256.png) 
 
-日記ページは現時点で以下のようなセクションで構成されており、[ライフログ](http://d.hatena.ne.jp/keyword/%A5%E9%A5%A4%A5%D5%A5%ED%A5%B0)の部分に雑にメモを書いていきます。
+日記ページは現時点で以下のようなセクションで構成されており、$1の部分に雑にメモを書いていきます。
 
 1. 前日 | 翌日のリンク
 2. タスクリスト
 3. 感想
-4. [ライフログ](http://d.hatena.ne.jp/keyword/%A5%E9%A5%A4%A5%D5%A5%ED%A5%B0)
+4. $1
 
-基本的にはその時の気持ちとかやったこととかをだらだら書いていますが、何かしら別テーマで書きたいことが出てきたら`[]`でリンクを作成して、そこから別ページにメモします。<img alt="f:id:ikmbear:20211015133311p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211015/20211015133311.png" title="" height="288" width="963" />
+基本的にはその時の気持ちとかやったこととかをだらだら書いていますが、何かしら別テーマで書きたいことが出てきたら`[]`でリンクを作成して、そこから別ページにメモします。 ![f:id:ikmbear:20211015133311p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211015/20211015133311.png) 
 
 日記ページは前日、翌日のリンクがあるので、暇な時にたまに見返すのですが、ここに別ページへのリンクを貼っておくとついついそのページも見て、知識の整理ができるというメリットがあります。
 
 もともと自分はpixiv百科事典を眺めるのが趣味で、芋づる式に関連項目に飛ぶのが面白いなと思ったことから、単独でページを作成せずに、最低限作成日からリンクを飛ばすような仕組みにした経緯があります。
 
-あと書いている最中は[ライフログ](http://d.hatena.ne.jp/keyword/%A5%E9%A5%A4%A5%D5%A5%ED%A5%B0)の中に書いていたけど、見返すと別テーマに切り出せそうなものは後から別ページにしています。これは[リファクタリング](http://d.hatena.ne.jp/keyword/%A5%EA%A5%D5%A5%A1%A5%AF%A5%BF%A5%EA%A5%F3%A5%B0)でメソッド切り出しを行うような感じがしていて、結構気に入っています。
+あと書いている最中は$1の中に書いていたけど、見返すと別テーマに切り出せそうなものは後から別ページにしています。これは$1でメソッド切り出しを行うような感じがしていて、結構気に入っています。
 
 ## 使っているUser Scriptの紹介
 
-...とここまでが（ざっくりですが）最近の[Scrapbox](http://d.hatena.ne.jp/keyword/Scrapbox)の使い方で、ここからは使用するにあたって利用しているUser Scriptを紹介します。
+...とここまでが（ざっくりですが）最近のScrapboxの使い方で、ここからは使用するにあたって利用しているUser Scriptを紹介します。
 
-なお[UserScript](https://scrapbox.io/help-jp/UserScript)は、自分のプロフィールページに[Javascript](http://d.hatena.ne.jp/keyword/Javascript)でコードを書くことで、[Scrapbox](http://d.hatena.ne.jp/keyword/Scrapbox)をカスタマイズできる機能です。詳細はリンク先参照。
+なお[UserScript](https://scrapbox.io/help-jp/UserScript)は、自分のプロフィールページにJavascriptでコードを書くことで、Scrapboxをカスタマイズできる機能です。詳細はリンク先参照。
 
 ### テンプレートボタン
 
 日記ページを自動で作成してくれるボタンです。新規ページを開いている時に押すことで機能します。
 
-<img alt="f:id:ikmbear:20211015133656g:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211015/20211015133656.gif" title="" height="583" width="1035" />
+ ![f:id:ikmbear:20211015133656g:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211015/20211015133656.gif) 
 
 ソースは[テンプレートを使ってページを作成（UserScript版） - Scrapboxとあそぶ](https://scrapbox.io/scrasobox/%E3%83%86%E3%83%B3%E3%83%97%E3%83%AC%E3%83%BC%E3%83%88%E3%82%92%E4%BD%BF%E3%81%A3%E3%81%A6%E3%83%9A%E3%83%BC%E3%82%B8%E3%82%92%E4%BD%9C%E6%88%90%EF%BC%88UserScript%E7%89%88%EF%BC%89)で紹介されているものを一部修正して使用させていただきました。
 
@@ -71,13 +71,13 @@ Notion、Mem、Bear、InkDrop...etc。メモアプリは色々と試してきま
 
 名前の通りです。別のメモを書いてから日記ページに戻るのに、一度トップページを挟むのが煩わしくて作りました。
 
-<img alt="f:id:ikmbear:20211015134049g:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211015/20211015134049.gif" title="" height="583" width="1035" />
+ ![f:id:ikmbear:20211015134049g:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211015/20211015134049.gif) 
 
 ```
   const today = new Date()  const year = today.getFullYear()  const month = ("0"+(today.getMonth() + 1)).slice(-2)  const date = ("0"+today.getDate()).slice(-2)  const formatToday = encodeURIComponent(`${year}/${month}/${date}`)  const menuTitle = 'Daily'   scrapbox.PageMenu.addMenu({    title: menuTitle,    image: 'https://twitter.com/favicon.ico',    onClick: () => window.location.href = `https://scrapbox.io/tadokoro/${formatToday}`  })
 ```
 
-見た目をFontAwesomeアイコンにするために、[UserCSS](http://d.hatena.ne.jp/keyword/UserCSS)も利用しています。
+見た目をFontAwesomeアイコンにするために、UserCSSも利用しています。
 
 ```
  a#Daily.tool-btn:hover { text-decoration: none } a#Daily.tool-btn::before { position: absolute; content: '\f783'; font: 900 21px/46px 'Font Awesome 5 Free' } a#Daily.tool-btn img { opacity: 0 }
@@ -85,6 +85,6 @@ Notion、Mem、Bear、InkDrop...etc。メモアプリは色々と試してきま
 
 ---
 
-あとは見た目関連の[スクリプト](http://d.hatena.ne.jp/keyword/%A5%B9%A5%AF%A5%EA%A5%D7%A5%C8)や[CSS](http://d.hatena.ne.jp/keyword/CSS)をちょちょっといじって使っています。何か気になるものは質問いただけば、回答します。  
-[Scrapbox](http://d.hatena.ne.jp/keyword/Scrapbox)に雑にメモできるせいで、記事もなんとなく雑になっちゃいましたね💦  
-皆さんもぜひ[Scrapbox](http://d.hatena.ne.jp/keyword/Scrapbox)使ってみてください（締めまで雑）
+あとは見た目関連のCSSやCSSをちょちょっといじって使っています。何か気になるものは質問いただけば、回答します。  
+Scrapboxに雑にメモできるせいで、記事もなんとなく雑になっちゃいましたね💦  
+皆さんもぜひScrapbox使ってみてください（締めまで雑）
