--- a/src/content/blog/202110161634388429.md
+++ b/src/content/blog/202110161634388429.md
@@ -12,7 +12,7 @@ tags:
 description: "雑なプログラミング問題（LEET変換プログラム）"
 ---
 
-ネットで見かけたプログラミング問題を[Ruby](http://d.hatena.ne.jp/keyword/Ruby)で解いてみました。簡単なテストコードも作ったので、みなさんも是非解いてみてください。
+ネットで見かけたプログラミング問題をRubyで解いてみました。簡単なテストコードも作ったので、みなさんも是非解いてみてください。
 
 ## 問題
 
@@ -51,7 +51,7 @@ description: "雑なプログラミング問題（LEET変換プログラム）"
 今回は文字列を`String#chars`を利用して一文字ずつ配列に分解し、ハッシュテーブルを利用することで変換しています。  
 ハッシュテーブルに値がない場合は文字列そのままを返す必要があるのですが、これは短絡評価を利用することで短く表記しています。
 
-3項[演算子](http://d.hatena.ne.jp/keyword/%B1%E9%BB%BB%BB%D2)を使って書いてみると以下のような感じです。
+3項$1を使って書いてみると以下のような感じです。
 
 ```
 def leetify(original_string)  string.chars.map { |s| LEET_TABLE[s] ? LEET_TABLE[s] : s }end
