--- a/src/content/blog/202110181634525749.md
+++ b/src/content/blog/202110181634525749.md
@@ -14,14 +14,14 @@ description: "文字列に大文字と小文字が混在していることを判
 
 IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211018/20211018115513.png
 
-<img alt="f:id:ikmbear:20211018115513p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211018/20211018115513.png" title="" height="630" width="1200" />小ネタ。[Ruby](http://d.hatena.ne.jp/keyword/Ruby)で書いているけど他の言語でも同じ。
+ ![f:id:ikmbear:20211018115513p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211018/20211018115513.png) 小ネタ。Rubyで書いているけど他の言語でも同じ。
 
 ある文字列wordに大文字と小文字の両方が含まれているかチェックするには
 
 - wordをすべて大文字にした結果とwordが等しいか（例：IKUMAとikuMaが等しいか）
 - wordをすべて小文字にした結果とwordが等しいか（例：ikumaとikuMaが等しいか）
 
-の[論理積](http://d.hatena.ne.jp/keyword/%CF%C0%CD%FD%C0%D1)を返せば良い。
+の$1を返せば良い。
 
 コードは次のようになる。
 
