--- a/src/content/blog/202110181634526176.md
+++ b/src/content/blog/202110181634526176.md
@@ -12,7 +12,7 @@ tags:
 description: "文字列に数値が含まれているか判定する"
 ---
 
-[Ruby](http://d.hatena.ne.jp/keyword/Ruby)である文字列wordに数値が含まれているかどうかをBoolean値で判定するには次のようにする
+Rubyである文字列wordに数値が含まれているかどうかをBoolean値で判定するには次のようにする
 
 ```
  def self.include_number?(word)    (word =~ /[0-9]/) != nil end
@@ -22,7 +22,7 @@ description: "文字列に数値が含まれているか判定する"
 
 > [docs.ruby-lang.org](https://docs.ruby-lang.org/ja/latest/method/String/i/=3d=7e.html)
 
-`String#=~`は、[正規表現](http://d.hatena.ne.jp/keyword/%C0%B5%B5%AC%C9%BD%B8%BD)を引数にとり、マッチすればそのインデックスを、そうでなければ`nil`を返す。
+`String#=~`は、$1を引数にとり、マッチすればそのインデックスを、そうでなければ`nil`を返す。
 
 このメソッドでは、`nil`と比較することで、
 
