--- a/src/content/blog/202110201634692368.md
+++ b/src/content/blog/202110201634692368.md
@@ -12,7 +12,7 @@ tags:
 description: "git initで作成されるブランチ名を変更する"
 ---
 
-久しぶりに[コマンドライン](http://d.hatena.ne.jp/keyword/%A5%B3%A5%DE%A5%F3%A5%C9%A5%E9%A5%A4%A5%F3)から`git init`したら、以下のようなメッセージが表示されました。
+久しぶりに$1から`git init`したら、以下のようなメッセージが表示されました。
 
 ```
  % git init hint: Using 'master' as the name for the initial branch. This default branch name hint: is subject to change. To configure the initial branch name to use in all hint: of your new repositories, which will suppress this warning, call: hint: hint:  git config --global init.defaultBranch <name> hint: hint: Names commonly chosen instead of 'master' are 'main', 'trunk' and hint: 'development'. The just-created branch can be renamed via this command: hint: hint:  git branch -m <name>
@@ -24,4 +24,4 @@ description: "git initで作成されるブランチ名を変更する"
 % git config --global init.defaultBranch main
 ```
 
-この状態で、`git init`をしてみると、ブランチが`main`で作成されていました。<img alt="f:id:ikmbear:20211020101207p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211020/20211020101207.png" title="" height="25" width="337" />
+この状態で、`git init`をしてみると、ブランチが`main`で作成されていました。 ![f:id:ikmbear:20211020101207p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211020/20211020101207.png) 
