--- a/src/content/blog/202112191639875600_1.md
+++ b/src/content/blog/202112191639875600_1.md
@@ -15,11 +15,11 @@ description: "⚡️初めてのLT会 Vol.10で登壇しました！！"
 
 IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218205648.png
 
-<img alt="f:id:ikmbear:20211218205648p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218205648.png" title="" height="542" width="968" />
+ ![f:id:ikmbear:20211218205648p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218205648.png) 
 
 ## ⚡️初めてのLT会 Vol.10に参加しました！
 
-昨日[FJORD BOOT CAMP](https://bootcamp.fjord.jp/)で開催された、ライトニング[トーク](http://d.hatena.ne.jp/keyword/%A5%C8%A1%BC%A5%AF)初心者のための発表会、「⚡️初めてのLT会 Vol.10」に参加しました！
+昨日[FJORD BOOT CAMP](https://bootcamp.fjord.jp/)で開催された、ライトニング$1初心者のための発表会、「⚡️初めてのLT会 Vol.10」に参加しました！
 
 今回のテーマは「一年間で得た学びと気づき」ということで、私は「作業するときにログを書いていくと、進捗が捗るよ〜」という話をさせていただきました。
 
@@ -72,7 +72,7 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/2021121
 
 「ログ駆動開発」ってちょっと言葉としては大袈裟ですね笑。ビジネス本として出したら叩かれそうですが、LTという短い尺だったので、コンパクトにタイトルつけさせていただきました。
 
-もともとは「寄り道レトロスペクティブ」というタイトルで、今年は[Rails](http://d.hatena.ne.jp/keyword/Rails)とかGemのソースにいろいろと寄り道してきた話をしようと思ったのですが、ボリュームが大きすぎたので、その話の中で「どうやって難しい内容に対しても安定して進捗を出していくか」というセクションだけ切り出した内容が今回の話になります。
+もともとは「寄り道レトロスペクティブ」というタイトルで、今年はRailsとかGemのソースにいろいろと寄り道してきた話をしようと思ったのですが、ボリュームが大きすぎたので、その話の中で「どうやって難しい内容に対しても安定して進捗を出していくか」というセクションだけ切り出した内容が今回の話になります。
 
 話している内容的には、以下の記事と多少オーバーラップするところがあるので、気になる方はこちらも読んでいただければ
 
@@ -95,25 +95,25 @@ LT会での質問で
 
 ### どこにログを書いているか
 
-ログはすべて[Scrapbox](http://d.hatena.ne.jp/keyword/Scrapbox)に書いています。やり方としては1日ごとにページを作成して、その中に書いていくようなイメージです。
+ログはすべてScrapboxに書いています。やり方としては1日ごとにページを作成して、その中に書いていくようなイメージです。
 
 <iframe src="https://hatenablog-parts.com/embed?url=https%3A%2F%2Fikmbear.hatenablog.com%2Fentry%2F20211015%2F1634273489" title="最近のScrapboxの使い方（2021/10） - セットプチフォッカ" class="embed-card embed-blogcard" scrolling="no" frameborder="0" style="display: block; width: 100%; height: 190px; max-width: 500px; margin: 10px 0px;"></iframe>
 
 > [ikmbear.hatenablog.com](https://ikmbear.hatenablog.com/entry/20211015/1634273489)
 
-この記事で書いた内容と変わっていないのですが、次のように日報作成ボタンを[JavaScript](http://d.hatena.ne.jp/keyword/JavaScript)でカスタムしているので、それを使って今日のページを作成します。
+この記事で書いた内容と変わっていないのですが、次のように日報作成ボタンをJavaScriptでカスタムしているので、それを使って今日のページを作成します。
 
-<img alt="f:id:ikmbear:20211218192942g:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218192942.gif" title="" height="606" width="800" />
+ ![f:id:ikmbear:20211218192942g:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218192942.gif) 
 
 ```
 ←[2021/12/17]：[2021/12/19]→[{ 日報][*** 👍やったこと] [_][*** 🎓学習したこと][** 【わかったこと】][** 【わからなかったこと】][*** 🥷次にやること][*** 🍘感想・余談][{ ライフログ]
 ```
 
-[チェックボックス](http://d.hatena.ne.jp/keyword/%A5%C1%A5%A7%A5%C3%A5%AF%A5%DC%A5%C3%A5%AF%A5%B9)や「日報」の見た目は[CSS](http://d.hatena.ne.jp/keyword/CSS)で拡張してわかりやすいように表示しています。（長くなるのでコードは割愛します。どっか別の記事で書くと思います）。
+CSSや「日報」の見た目はCSSで拡張してわかりやすいように表示しています。（長くなるのでコードは割愛します。どっか別の記事で書くと思います）。
 
-「日報」のセクションは、そのままFJORD [BOOT CAMP](http://d.hatena.ne.jp/keyword/BOOT%20CAMP)で提出するための日報テンプレートになっています。
+「日報」のセクションは、そのままFJORD BOOT CAMPで提出するための日報テンプレートになっています。
 
-で、「[ライフログ](http://d.hatena.ne.jp/keyword/%A5%E9%A5%A4%A5%D5%A5%ED%A5%B0)」のセクションが今回のLT会でお話ししたログを書く場所です。ここにログを記載していきます。
+で、「$1」のセクションが今回のLT会でお話ししたログを書く場所です。ここにログを記載していきます。
 
 ### どういう風にログを書いているか（ルール）
 
@@ -127,15 +127,15 @@ LT会での質問で
 
 #### 日付と時刻の入力
 
-<img alt="f:id:ikmbear:20211218193735g:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218193735.gif" title="" height="125" width="800" />
+ ![f:id:ikmbear:20211218193735g:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218193735.gif) 
 
-[Scrapbox](http://d.hatena.ne.jp/keyword/Scrapbox)では`⌃` + `T`で日付を入力することができます。3つのフォーマットがあるのですが、3回押した際に出てくる時刻入りのフォーマットを使って、ログの入力を開始します。
+Scrapboxでは`⌃` + `T`で日付を入力することができます。3つのフォーマットがあるのですが、3回押した際に出てくる時刻入りのフォーマットを使って、ログの入力を開始します。
 
 時刻を入力するタイミングは厳密には決めていませんが、時間が経っていたり、内容が変わるときには大体日付を入力し直すようにしています。
 
 #### 別のページへの切り出し
 
-<img alt="f:id:ikmbear:20211218194033g:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218194033.gif" title="" height="598" width="800" />
+ ![f:id:ikmbear:20211218194033g:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218194033.gif) 
 
 ログを書いている中で、「これまた見返しそうだな」と思ったり、独立した内容になっていたら、その部分を選択して「New Page」を選択することで別ページに切り出しています。
 
@@ -143,7 +143,7 @@ LT会での質問で
 
 #### とりあえずリンクにしておく
 
-<img alt="f:id:ikmbear:20211218201827p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218201827.png" title="" height="61" width="245" />
+ ![f:id:ikmbear:20211218201827p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218201827.png) 
 
 ログを書いていると、「この単語後からまとめたいけど、今は時間ないな」「こういう概念でまとめておいたら、自分の考えがまとまりそう」みたいな要素に出会うことが多々あります。
 
@@ -153,17 +153,17 @@ LT会での質問で
 
 ### どういう風にログを書いているか（実例）
 
-[ライフログ](http://d.hatena.ne.jp/keyword/%A5%E9%A5%A4%A5%D5%A5%ED%A5%B0)の中に個人的な内容も書いているので、ある時から[Scrapbox](http://d.hatena.ne.jp/keyword/Scrapbox)をprivateにしてしまいました。なので抜粋してお届けします。
+Scrapboxの中に個人的な内容も書いているので、ある時からScrapboxをprivateにしてしまいました。なので抜粋してお届けします。
 
 #### 気持ちの整理
 
-<img alt="f:id:ikmbear:20211218194831p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218194831.png" title="" height="300" width="682" />
+ ![f:id:ikmbear:20211218194831p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218194831.png) 
 
 本来であればタスクを整理→作業開始、くらいの感じだと思うんですが、やる気が出なかったようなのでタスク整理する前に気持ちを整理しているメモです。
 
 自分で自分を鼓舞していること、今自分の身に起きていることをとにかく書き出していることがポイントです。
 
-<img alt="f:id:ikmbear:20211218195344p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218195344.png" title="" height="280" width="820" />
+ ![f:id:ikmbear:20211218195344p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218195344.png) 
 
 レビューしてもらった内容があまりいいものではなくて、気持ちが落ち込んでしまった時のログです。なんだかモヤモヤしてしまって、「明日作業するのだるいな〜」と思っていたので、その日のうちに頭の中にあることをとにかく書き出しました（この後めちゃくちゃ寝て、翌日朝から快調に作業ができました）。
 
@@ -173,7 +173,7 @@ LT会での質問で
 
 #### 普通のログ
 
-<img alt="f:id:ikmbear:20211218200454p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218200454.png" title="" height="883" width="875" />
+ ![f:id:ikmbear:20211218200454p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218200454.png) 
 
 普通のログは結構やった作業を全部書いていることが多いです。
 
@@ -181,32 +181,32 @@ LT会での質問で
 
 だいたいこのパターンの後に「よしじゃあひとつずつ見ていこうか」「全然わからんな」「本当？今自分が知っていることは何？」みたいな常套句が続きます。
 
-<img alt="f:id:ikmbear:20211218201241p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218201241.png" title="" height="175" width="342" />
+ ![f:id:ikmbear:20211218201241p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218201241.png) 
 
-これはリファクタされたメモの例で、ログを振り返ると全然書いていないように見えるんですが、例えば「[国民健康保険](http://d.hatena.ne.jp/keyword/%B9%F1%CC%B1%B7%F2%B9%AF%CA%DD%B8%B1)・[国民年金](http://d.hatena.ne.jp/keyword/%B9%F1%CC%B1%C7%AF%B6%E2)・住民税の計算方法」は次のように別のページとして成立した内容になっています。
+これはリファクタされたメモの例で、ログを振り返ると全然書いていないように見えるんですが、例えば「$1・$1・住民税の計算方法」は次のように別のページとして成立した内容になっています。
 
-<img alt="f:id:ikmbear:20211218201342p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218201342.png" title="" height="735" width="964" />
+ ![f:id:ikmbear:20211218201342p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218201342.png) 
 
-これは技術全然関係ないですが、例えば「[PostgreSQL](http://d.hatena.ne.jp/keyword/PostgreSQL)でエラーになった」とか「[Rails](http://d.hatena.ne.jp/keyword/Rails)で例外発生」みたいな事象にあったときには、とことんログを書きながら調べていって、後から別ページに切り出すと、検索性も高くなってとても良きです。
+これは技術全然関係ないですが、例えば「PostgreSQLでエラーになった」とか「Railsで例外発生」みたいな事象にあったときには、とことんログを書きながら調べていって、後から別ページに切り出すと、検索性も高くなってとても良きです。
 
 ---
 
-その他の[Scrapbox](http://d.hatena.ne.jp/keyword/Scrapbox)の使い方（[Scrapbox](http://d.hatena.ne.jp/keyword/Scrapbox)用のクライアント、各種[スクリプト](http://d.hatena.ne.jp/keyword/%A5%B9%A5%AF%A5%EA%A5%D7%A5%C8)）については別の記事で紹介したいと思います（長いんで）。
+その他のScrapboxの使い方（Scrapbox用のクライアント、各種Scrapbox）については別の記事で紹介したいと思います（長いんで）。
 
-## 資料の作成方法（[Figma](http://d.hatena.ne.jp/keyword/Figma)）
+## 資料の作成方法（Figma）
 
 発表中、資料内のイラスト等にも質問をいただきましたのでここに書いていければと思います。
 
-### 資料は[Figma](http://d.hatena.ne.jp/keyword/Figma)
+### 資料はFigma
 
 <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&amp;url=https%3A%2F%2Fwww.figma.com%2Ffile%2FeIzscA2nFdBb5VV7LgBFQU%2F%25E5%2588%259D%25E3%2582%2581%25E3%2581%25A6%25E3%2581%25AELT%25E4%25BC%259A-Vol.10%3Fnode-id%3D0%253A1" allowfullscreen=""></iframe>
 
-今回の資料は[Figma](http://d.hatena.ne.jp/keyword/Figma)で作成しました。結局[Keynote](http://d.hatena.ne.jp/keyword/Keynote)使ったの前回の一回だけだった笑
+今回の資料はFigmaで作成しました。結局Keynote使ったの前回の一回だけだった笑
 
-[Figma](http://d.hatena.ne.jp/keyword/Figma)を使う理由は
+Figmaを使う理由は
 
 - 色やフォントをストックしておける
-- [コンポーネント](http://d.hatena.ne.jp/keyword/%A5%B3%A5%F3%A5%DD%A1%BC%A5%CD%A5%F3%A5%C8)を使える
+- $1を使える
 - スライドを一覧しやすい
 
 という理由です。
@@ -229,7 +229,7 @@ LT会での質問で
 
 #### 漫画風デザイン
 
-<img alt="f:id:ikmbear:20211218203127p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218203127.png" title="" height="448" width="793" />
+ ![f:id:ikmbear:20211218203127p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218203127.png) 
 
 この画像はどこから？という質問があったのですが、これはOpen Peepsという素材を使っています。
 
@@ -237,11 +237,11 @@ LT会での質問で
 
 > [pablostanley.gumroad.com](https://pablostanley.gumroad.com/l/openpeeps?wanted=true)
 
-<img alt="f:id:ikmbear:20211218203250p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218203250.png" title="" height="936" width="956" />
+ ![f:id:ikmbear:20211218203250p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218203250.png) 
 
-素材の中にこういう漫画っぽいイラストがあったので、コマ割りと中に出てくるキャ[ラク](http://d.hatena.ne.jp/keyword/%A5%E9%A5%AF)ターを[Figma](http://d.hatena.ne.jp/keyword/Figma)で編集しました。
+素材の中にこういう漫画っぽいイラストがあったので、コマ割りと中に出てくるキャFigmaターをFigmaで編集しました。
 
-それだけでもよかったんですが、漫画といえば集中線とか[スクリーントーン](http://d.hatena.ne.jp/keyword/%A5%B9%A5%AF%A5%EA%A1%BC%A5%F3%A5%C8%A1%BC%A5%F3)、[吹き出し](http://d.hatena.ne.jp/keyword/%BF%E1%A4%AD%BD%D0%A4%B7)があった方がいいでしょ、ということでマンガパーツSTOCKというサイトから素材を拾ってきて合成し、今回のスライドの完成です。
+それだけでもよかったんですが、漫画といえば集中線とか$1、$1があった方がいいでしょ、ということでマンガパーツSTOCKというサイトから素材を拾ってきて合成し、今回のスライドの完成です。
 
 <iframe src="https://hatenablog-parts.com/embed?url=https%3A%2F%2Fmangasozai.com%2F" title="マンガパーツSTOCK – 集中線、効果線特化サイト" class="embed-card embed-webcard" scrolling="no" frameborder="0" style="display: block; width: 100%; height: 155px; max-width: 500px; margin: 10px 0px;"></iframe>
 
@@ -251,7 +251,7 @@ LT会での質問で
 
 #### 表紙のイラスト
 
-<img alt="f:id:ikmbear:20211218203539p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218203539.png" title="" height="449" width="791" />
+ ![f:id:ikmbear:20211218203539p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218203539.png) 
 
 表紙にはログ→航海日誌→船の連想から、船の画像をのせています。これはLoose Drawingというサイトから拾ってきたものです。何かイラストが必要な時は、ソコストかLoose Drawingで拾ってくることが多いです。
 
@@ -261,35 +261,35 @@ LT会での質問で
 
 #### アニメの画像
 
-<img alt="f:id:ikmbear:20211218203749p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218203749.png" title="" height="445" width="791" />
+ ![f:id:ikmbear:20211218203749p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218203749.png) 
 
-これは私が持っている[SHIROBAKO](http://d.hatena.ne.jp/keyword/SHIROBAKO)の[Bluray](http://d.hatena.ne.jp/keyword/Bluray)-Diskをスクショしただけです。
+これは私が持っているSHIROBAKOのBluray-Diskをスクショしただけです。
 
 [![SHIROBAKO Blu-ray BOX 1 スタンダード エディション (3枚組)](https://m.media-amazon.com/images/I/51PE1dOL4tL._SL500_.jpg "SHIROBAKO Blu-ray BOX 1 スタンダード エディション (3枚組)")](https://www.amazon.co.jp/dp/B081VL3N76?tag=hatena-22&linkCode=ogi&th=1&psc=1)
 
 [SHIROBAKO Blu-ray BOX 1 スタンダード エディション (3枚組)](https://www.amazon.co.jp/dp/B081VL3N76?tag=hatena-22&linkCode=ogi&th=1&psc=1)
 
-- [木村珠莉](http://d.hatena.ne.jp/keyword/%CC%DA%C2%BC%BC%EE%E8%BD)
+- $1
 
 [Amazon](https://www.amazon.co.jp/dp/B081VL3N76?tag=hatena-22&linkCode=ogi&th=1&psc=1)
 
 #### 絵文字っぽいの
 
-<img alt="f:id:ikmbear:20211218203909p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218203909.png" title="" height="265" width="636" />
+ ![f:id:ikmbear:20211218203909p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218203909.png) 
 
-[Figma](http://d.hatena.ne.jp/keyword/Figma)ではFontAwesomeを利用することができるので、図解に[ピクトグラム](http://d.hatena.ne.jp/keyword/%A5%D4%A5%AF%A5%C8%A5%B0%A5%E9%A5%E0)を使いたい時はFontAwesomeを使っています。
+FigmaではFontAwesomeを利用することができるので、図解にFigmaを使いたい時はFontAwesomeを使っています。
 
 ## 練習のために使ったツール：CleanShot X
 
-今回は[Figma](http://d.hatena.ne.jp/keyword/Figma)でスライドをつくったのですが、そうすると録画機能がないために練習をどうしようか迷いました（録音するので）。
+今回はFigmaでスライドをつくったのですが、そうすると録画機能がないために練習をどうしようか迷いました（録音するので）。
 
-で、最近購入したCleanShot Xは[スクリーンショット](http://d.hatena.ne.jp/keyword/%A5%B9%A5%AF%A5%EA%A1%BC%A5%F3%A5%B7%A5%E7%A5%C3%A5%C8)だけではなく、GIFや動画も撮影できることがわかったので、今回はこれを使って録画練習をしました。
+で、最近購入したCleanShot Xは$1だけではなく、GIFや動画も撮影できることがわかったので、今回はこれを使って録画練習をしました。
 
 <iframe src="https://hatenablog-parts.com/embed?url=https%3A%2F%2Fcleanshot.com%2F" title="CleanShot X for Mac" class="embed-card embed-webcard" scrolling="no" frameborder="0" style="display: block; width: 100%; height: 155px; max-width: 500px; margin: 10px 0px;"></iframe>
 
 > [cleanshot.com](https://cleanshot.com/)
 
-<img alt="f:id:ikmbear:20211218204350p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218204350.png" title="" height="628" width="1200" />
+ ![f:id:ikmbear:20211218204350p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20211218/20211218204350.png) 
 
 しかも録画するときにワイプで自分の画像もうつせることに気がついたので、もっぱらこのスタイルで録画をしての練習でした。
 
@@ -299,6 +299,6 @@ LT会での質問で
 
 登壇をやるのはそれなりに大変だけど、その分自分の考えをいろんな人に知ってもらえて、やってよかったな〜と改めて思いました！
 
-今回はFJORD [BOOT CAMP](http://d.hatena.ne.jp/keyword/BOOT%20CAMP)内でしたが、来年は今作っているGemの内容で外部のLT会にも登壇しにいきたいと思っています！
+今回はFJORD BOOT CAMP内でしたが、来年は今作っているGemの内容で外部のLT会にも登壇しにいきたいと思っています！
 
 ではでは〜！
