--- a/src/content/blog/202201181642490708.md
+++ b/src/content/blog/202201181642490708.md
@@ -14,13 +14,13 @@ description: "日本の地方公共団体コードをパースするGemをリリ
 
 IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220118/20220118162141.png
 
-<img alt="f:id:ikmbear:20220118162141p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220118/20220118162141.png" title="" height="675" width="1200" />
+ ![f:id:ikmbear:20220118162141p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220118/20220118162141.png) 
 
 ## 作ったもの
 
-<img alt="f:id:ikmbear:20220118162056p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220118/20220118162056.png" title="" height="675" width="1200" />
+ ![f:id:ikmbear:20220118162056p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220118/20220118162056.png) 
 
-jp_local_govという日本の[地方公共団体](http://d.hatena.ne.jp/keyword/%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE)コードを市区町村の情報にパースしてくれるGemを作りました。人生初Gemリリースです🎉
+jp_local_govという日本の$1コードを市区町村の情報にパースしてくれるGemを作りました。人生初Gemリリースです🎉
 
 <iframe src="https://hatenablog-parts.com/embed?url=https%3A%2F%2Fgithub.com%2FIkumaTadokoro%2Fjp_local_gov" title="GitHub - IkumaTadokoro/jp_local_gov: Convert japan local government code (JIS X 0402 based) into the local government name." class="embed-card embed-webcard" scrolling="no" frameborder="0" style="display: block; width: 100%; height: 155px; max-width: 500px; margin: 10px 0px;"></iframe>
 
@@ -30,9 +30,9 @@ jp_local_govという日本の[地方公共団体](http://d.hatena.ne.jp/keyword
 
 > [rubygems.org](https://rubygems.org/gems/jp_local_gov)
 
-「そもそも[地方公共団体](http://d.hatena.ne.jp/keyword/%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE)コードってなんやねん」方も多いと思いますが、
+「そもそも$1コードってなんやねん」方も多いと思いますが、
 
-> **[全国地方公共団体コード](http://d.hatena.ne.jp/keyword/%C1%B4%B9%F1%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE%A5%B3%A1%BC%A5%C9)**（ぜんこくちほうこうきょうだんたいコード）[[注釈 1]](https://ja.wikipedia.org/wiki/%E5%85%A8%E5%9B%BD%E5%9C%B0%E6%96%B9%E5%85%AC%E5%85%B1%E5%9B%A3%E4%BD%93%E3%82%B3%E3%83%BC%E3%83%89#cite_note-2)は、[日本](https://ja.wikipedia.org/wiki/%E6%97%A5%E6%9C%AC)の[地方公共団体](https://ja.wikipedia.org/wiki/%E5%9C%B0%E6%96%B9%E5%85%AC%E5%85%B1%E5%9B%A3%E4%BD%93)につけられた、数字3[桁](https://ja.wikipedia.org/wiki/%E6%A1%81)または5桁または6桁の符号（コード）で ある。コードが与えられる[地方公共団体](http://d.hatena.ne.jp/keyword/%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE)とは、[都道府県](https://ja.wikipedia.org/wiki/%E9%83%BD%E9%81%93%E5%BA%9C%E7%9C%8C)・[市町村](https://ja.wikipedia.org/wiki/%E5%B8%82%E7%94%BA%E6%9D%91)・[特別区](https://ja.wikipedia.org/wiki/%E7%89%B9%E5%88%A5%E5%8C%BA)、[一部事務組合](https://ja.wikipedia.org/wiki/%E4%B8%80%E9%83%A8%E4%BA%8B%E5%8B%99%E7%B5%84%E5%90%88)・[地方開発事業団](https://ja.wikipedia.org/wiki/%E5%9C%B0%E6%96%B9%E9%96%8B%E7%99%BA%E4%BA%8B%E6%A5%AD%E5%9B%A3)・[広域連合](https://ja.wikipedia.org/wiki/%E5%BA%83%E5%9F%9F%E9%80%A3%E5%90%88)、加えて、[地方公共団体](http://d.hatena.ne.jp/keyword/%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE)ではないが[行政区](https://ja.wikipedia.org/wiki/%E8%A1%8C%E6%94%BF%E5%8C%BA)・[東京都区部](https://ja.wikipedia.org/wiki/%E6%9D%B1%E4%BA%AC%E9%83%BD%E5%8C%BA%E9%83%A8)である。
+> **$1**（ぜんこくちほうこうきょうだんたいコード）[[注釈 1]](https://ja.wikipedia.org/wiki/%E5%85%A8%E5%9B%BD%E5%9C%B0%E6%96%B9%E5%85%AC%E5%85%B1%E5%9B%A3%E4%BD%93%E3%82%B3%E3%83%BC%E3%83%89#cite_note-2)は、[日本](https://ja.wikipedia.org/wiki/%E6%97%A5%E6%9C%AC)の[地方公共団体](https://ja.wikipedia.org/wiki/%E5%9C%B0%E6%96%B9%E5%85%AC%E5%85%B1%E5%9B%A3%E4%BD%93)につけられた、数字3[桁](https://ja.wikipedia.org/wiki/%E6%A1%81)または5桁または6桁の符号（コード）で ある。コードが与えられる$1とは、[都道府県](https://ja.wikipedia.org/wiki/%E9%83%BD%E9%81%93%E5%BA%9C%E7%9C%8C)・[市町村](https://ja.wikipedia.org/wiki/%E5%B8%82%E7%94%BA%E6%9D%91)・[特別区](https://ja.wikipedia.org/wiki/%E7%89%B9%E5%88%A5%E5%8C%BA)、[一部事務組合](https://ja.wikipedia.org/wiki/%E4%B8%80%E9%83%A8%E4%BA%8B%E5%8B%99%E7%B5%84%E5%90%88)・[地方開発事業団](https://ja.wikipedia.org/wiki/%E5%9C%B0%E6%96%B9%E9%96%8B%E7%99%BA%E4%BA%8B%E6%A5%AD%E5%9B%A3)・[広域連合](https://ja.wikipedia.org/wiki/%E5%BA%83%E5%9F%9F%E9%80%A3%E5%90%88)、加えて、$1ではないが[行政区](https://ja.wikipedia.org/wiki/%E8%A1%8C%E6%94%BF%E5%8C%BA)・[東京都区部](https://ja.wikipedia.org/wiki/%E6%9D%B1%E4%BA%AC%E9%83%BD%E5%8C%BA%E9%83%A8)である。
 >
 > [全国地方公共団体コード - Wikipedia](https://ja.wikipedia.org/wiki/%E5%85%A8%E5%9B%BD%E5%9C%B0%E6%96%B9%E5%85%AC%E5%85%B1%E5%9B%A3%E4%BD%93%E3%82%B3%E3%83%BC%E3%83%89)
 
@@ -40,13 +40,13 @@ jp_local_govという日本の[地方公共団体](http://d.hatena.ne.jp/keyword
 
 3桁、5桁、6桁とありますが、ルール的には
 
-- 上2桁が[都道](http://d.hatena.ne.jp/keyword/%C5%D4%C6%BB)府県、
+- 上2桁が$1府県、
 - 続く3桁が市区町村
 - 残りの1桁がチェックディジット
 
 になっているので、このGemでは6桁フルの状態をパースできるようになっています。
 
-READMEにも書いているのですが、jp_prefectureのア[イデア](http://d.hatena.ne.jp/keyword/%A5%A4%A5%C7%A5%A2)に多大に影響を受けています。
+READMEにも書いているのですが、jp_prefectureのア$1に多大に影響を受けています。
 
 <iframe src="https://hatenablog-parts.com/embed?url=https%3A%2F%2Fgithub.com%2Fchocoby%2Fjp_prefecture" title="GitHub - chocoby/jp_prefecture: Convert japan prefecture code (JIS X 0402 based) into prefecture name." class="embed-card embed-webcard" scrolling="no" frameborder="0" style="display: block; width: 100%; height: 155px; max-width: 500px; margin: 10px 0px;"></iframe>
 
@@ -58,9 +58,9 @@ READMEにも書いているのですが、jp_prefectureのア[イデア](http://
 
 ざっくりいうと公共料金を計算するサービスで、その計算のための料率が市区町村ごとに違うために、市区町村ごとにレコードを持つ必要がありました。
 
-で、市区町村だけのテーブルをもつのもなんだか微妙だし、市区町村のための管理画面をもつのも面倒だったので、「Gemでできないかな〜」と思っていたのですが、似たようなア[イデア](http://d.hatena.ne.jp/keyword/%A5%A4%A5%C7%A5%A2)のGemは更新が数年前...。
+で、市区町村だけのテーブルをもつのもなんだか微妙だし、市区町村のための管理画面をもつのも面倒だったので、「Gemでできないかな〜」と思っていたのですが、似たようなア$1のGemは更新が数年前...。
 
-...みたいなことを、FJORD [BOOT CAMP](http://d.hatena.ne.jp/keyword/BOOT%20CAMP)内で日報に書いたら、メンターさんから「作ってみては」とアド[バイス](http://d.hatena.ne.jp/keyword/%A5%D0%A5%A4%A5%B9)が。
+...みたいなことを、FJORD BOOT CAMP内で日報に書いたら、メンターさんから「作ってみては」とアド$1が。
 
 「ちょっと難しいかも...」と思いつつも、内心「作ってみたい、MY FIRST GEM」という思いが心の中に溢れてきたので、作ることにしました！
 
@@ -96,7 +96,7 @@ require 'jp_local_gov'
 
 ### id指定の検索（`JpLocalGov.find` ）
 
-[地方公共団体](http://d.hatena.ne.jp/keyword/%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE)コード（String）を指定することで、[地方公共団体](http://d.hatena.ne.jp/keyword/%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE)の情報を取得することができます。
+$1コード（String）を指定することで、$1の情報を取得することができます。
 
 ```
 chiyodaku = JpLocalGov.find("131016")# => #<JpLocalGov::LocalGov:0x00007fe706a8f148 @code="131016", @prefecture_code="13", @prefecture="東京都", @prefecture_kana="トウキョウト", @city="千代田区", @city_kana="チヨダク", @prefecture_capital=false>chiyodaku.code# => "131016"chiyodaku.prefecture_code# => "13"chiyodaku.prefecture# => "東京都"chiyodaku.prefecture_kana# => "トウキョウト"chiyodaku.city# => "千代田区"chiyodaku.city_kana# => "チヨダク"chiyodaku.prefecture_capital# => false
@@ -104,17 +104,17 @@ chiyodaku = JpLocalGov.find("131016")# => #<JpLocalGov::LocalGov:0x00007fe706a8f
 
 この後のメソッドでも共通ですが、取得できる情報は
 
-- [地方公共団体](http://d.hatena.ne.jp/keyword/%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE)コード
-- [都道](http://d.hatena.ne.jp/keyword/%C5%D4%C6%BB)府県コード
-- [都道](http://d.hatena.ne.jp/keyword/%C5%D4%C6%BB)府県（漢字）
-- [都道](http://d.hatena.ne.jp/keyword/%C5%D4%C6%BB)府県（カタカナ）
+- $1コード
+- $1府県コード
+- $1府県（漢字）
+- $1府県（カタカナ）
 - 市区町村（漢字）
 - 市区町村（カタカナ）
-- [都道府県庁](http://d.hatena.ne.jp/keyword/%C5%D4%C6%BB%C9%DC%B8%A9%C4%A3)所在地かどうか
+- $1所在地かどうか
 
 です。
 
-ひらがなとか英字とかも追加するのは苦ではないんですが、[総務省](http://d.hatena.ne.jp/keyword/%C1%ED%CC%B3%BE%CA)が出している元データは漢字とカタカナだけなのと、あんまり[ユースケース](http://d.hatena.ne.jp/keyword/%A5%E6%A1%BC%A5%B9%A5%B1%A1%BC%A5%B9)が見つからなかったので、一旦出していません。
+ひらがなとか英字とかも追加するのは苦ではないんですが、$1が出している元データは漢字とカタカナだけなのと、あんまり$1が見つからなかったので、一旦出していません。
 
 あと東京都の都庁所在地は一応「東京」って習ったと思うんですが、「新宿」として登録しています。
 
@@ -130,27 +130,27 @@ misato = JpLocalGov.where(city: "美郷町")# => [#<JpLocalGov::LocalGov:0x00007
 
 ### 全件検索（`JpLocalGov.all`）
 
-すべての[地方公共団体](http://d.hatena.ne.jp/keyword/%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE)の情報を取得したい場合に使用します。戻り値は配列です。
+すべての$1の情報を取得したい場合に使用します。戻り値は配列です。
 
 ```
 JpLocalGov.all# =>  [#<JpLocalGov::LocalGov:0x00007fdf3a9c6758 @code="011002", @prefecture_code="01", @prefecture="北海道", @prefecture_kana="ホッカイドウ", @city="札幌市na="サッポロシ", @prefecture_capital=true>, #<JpLocalGov::LocalGov:0x00007fdf3a9c6730 @code="011011",...
 ```
 
-[Rails](http://d.hatena.ne.jp/keyword/Rails)だと、`collection_select` を使用することで、すべての市区町村のコンボボックスを簡単に作ることができます。
+Railsだと、`collection_select` を使用することで、すべての市区町村のコンボボックスを簡単に作ることができます。
 
-### ランダムな[地方公共団体](http://d.hatena.ne.jp/keyword/%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE)情報の生成（`JpLocalGov::Random`）
+### ランダムな$1情報の生成（`JpLocalGov::Random`）
 
-ランダムな[地方公共団体](http://d.hatena.ne.jp/keyword/%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE)情報から、指定したプロパティを返します。
+ランダムな$1情報から、指定したプロパティを返します。
 
 ```
 JpLocalGov::Random.code# => "281077"JpLocalGov::Random.city# => "大島町"JpLocalGov::Random.city_kana# => "チュウオウシ"JpLocalGov::Random.prefecture# => "青森県"JpLocalGov::Random.prefecture_code# => "46"JpLocalGov::Random.prefecture_kana# => "ヒョウゴケン"
 ```
 
-一応想定するケースとしては、FactoryBotで[地方公共団体](http://d.hatena.ne.jp/keyword/%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE)コードを指定する際に、決めうちではんく探索的なテストデータを作成しておきたいという場合を想定しています。
+一応想定するケースとしては、FactoryBotで$1コードを指定する際に、決めうちではんく探索的なテストデータを作成しておきたいという場合を想定しています。
 
-後述しますが、[Rails](http://d.hatena.ne.jp/keyword/Rails)で使用する場合はDBに保持するカラムは`local_gov_code` だけなので、その他のプロパティのメソッドはあまり使い所がないかもしれません笑
+後述しますが、Railsで使用する場合はDBに保持するカラムは`local_gov_code` だけなので、その他のプロパティのメソッドはあまり使い所がないかもしれません笑
 
-補足として、あくまでプロパティ単位でしかランダムな値を生成しないので、ランダムな[地方公共団体](http://d.hatena.ne.jp/keyword/%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE)の[インスタンス](http://d.hatena.ne.jp/keyword/%A5%A4%A5%F3%A5%B9%A5%BF%A5%F3%A5%B9)を作成する場合は、
+補足として、あくまでプロパティ単位でしかランダムな値を生成しないので、ランダムな$1の$1を作成する場合は、
 
 ```
 JpLocalGov.find(JpLocalGov::Random.code)
@@ -158,11 +158,11 @@ JpLocalGov.find(JpLocalGov::Random.code)
 
 という具合に呼んでやる必要があります。需要があれば、`JpLocalGov::Random.new` みたいなのを作るかもです。
 
-### [Rails](http://d.hatena.ne.jp/keyword/Rails)での使用（基本）
+### Railsでの使用（基本）
 
 このGemをModelクラスに`include`することで、そのモデル内で`local_govenment` というメソッドが使えるようになります。
 
-`jp_local_gov :<地方公共団体コードを保存したカラム名>` とすることで、そのカラム（[地方公共団体](http://d.hatena.ne.jp/keyword/%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE)コード）から、[都道](http://d.hatena.ne.jp/keyword/%C5%D4%C6%BB)府県名や市区町村の情報を展開することができるようになります。
+`jp_local_gov :<地方公共団体コードを保存したカラム名>` とすることで、そのカラム（$1コード）から、$1府県名や市区町村の情報を展開することができるようになります。
 
 ```
 # app/models/insurance_fee.rb:class InsuranceFee < ActiveRecord::Base  # local_gov_code:String  include JpLocalGov  jp_local_gov :local_gov_codeend
@@ -172,11 +172,11 @@ JpLocalGov.find(JpLocalGov::Random.code)
 insurance_fee = InsuranceFee.newinsurance_fee.local_gov_code = "131016"insurance_fee.local_government.city# => "千代田区"
 ```
 
-なおカラム「[地方公共団体](http://d.hatena.ne.jp/keyword/%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE)コード」の作成時、型はStringにする必要があります。
+なおカラム「$1コード」の作成時、型はStringにする必要があります。
 
-### [Rails](http://d.hatena.ne.jp/keyword/Rails)での使用（バリデーション）（`JpLocalGov.valid_code?` ）
+### Railsでの使用（バリデーション）（`JpLocalGov.valid_code?` ）
 
-[地方公共団体](http://d.hatena.ne.jp/keyword/%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE)コードのチェックのためのメソッドを設けているので、これをカスタムバリデーションに組み込むことで、[地方公共団体](http://d.hatena.ne.jp/keyword/%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE)コードのチェックができます。
+$1コードのチェックのためのメソッドを設けているので、これをカスタムバリデーションに組み込むことで、$1コードのチェックができます。
 
 ```
 class InsuranceFee < ApplicationRecord  include JpLocalGov  jp_local_gov :local_gov_code  ## カスタムバリデーションで利用する  validate :valid_code?  def valid_code?    unless JpLocalGov.valid_code?(local_gov_code)      errors.add(:local_gov_code, "is not valid code")    end  endend
@@ -187,17 +187,17 @@ class InsuranceFee < ApplicationRecord  include JpLocalGov  jp_local_gov :local_
 - コードが文字列かどうか
 - コードが正しい長さか（6文字）
 - チェックディジットを満たしているか
-- 正しい[都道](http://d.hatena.ne.jp/keyword/%C5%D4%C6%BB)府県コードを持っているか
+- 正しい$1府県コードを持っているか
 
 です。
 
-チェックディジットについては、[地方公共団体](http://d.hatena.ne.jp/keyword/%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE)コードの仕様に記載があります。
+チェックディジットについては、$1コードの仕様に記載があります。
 
-<img alt="f:id:ikmbear:20220118162309p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220118/20220118162309.png" title="" height="211" width="532" />
+ ![f:id:ikmbear:20220118162309p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220118/20220118162309.png) 
 
 > 11 検査数字
 >
-> [全国地方公共団体コード](http://d.hatena.ne.jp/keyword/%C1%B4%B9%F1%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE%A5%B3%A1%BC%A5%C9)における検査数字は、電算処理にあたって、不正なコードが使われないよう第6桁目をチェック用としたもので、次の方式により算出した数字とする。(方式)第1桁から第5桁までの数字に、それぞれ6.5.4.3.2を乗じて算出した積の和を求め、その和を11で除し、商と剰余(以下「余り数字」という。)を求めて、11と余り数字との差の下1桁の数字を検査数字とする。ただし、積の和が11より小なるときは、検査数字は、11から積の和を控除した数字とする。
+> $1における検査数字は、電算処理にあたって、不正なコードが使われないよう第6桁目をチェック用としたもので、次の方式により算出した数字とする。(方式)第1桁から第5桁までの数字に、それぞれ6.5.4.3.2を乗じて算出した積の和を求め、その和を11で除し、商と剰余(以下「余り数字」という。)を求めて、11と余り数字との差の下1桁の数字を検査数字とする。ただし、積の和が11より小なるときは、検査数字は、11から積の和を控除した数字とする。
 
 出典：[https://www.soumu.go.jp/main_content/000137948.pdf](https://www.soumu.go.jp/main_content/000137948.pdf)
 
@@ -207,55 +207,55 @@ class InsuranceFee < ApplicationRecord  include JpLocalGov  jp_local_gov :local_
 CHECK_DIGITS_INDEX = 5CHECK_BASE = 11sub_total = code.chars                .take(CHECK_DIGITS_INDEX)                .map.with_index { |digit, index| digit.to_i * (CHECK_DIGITS_INDEX - index + 1) }                .sumcandidate = (CHECK_BASE - sub_total % CHECK_BASE) % 10check_digits = sub_total > CHECK_BASE ? candidate : CHECK_BASE - sub_totalcode[CHECK_DIGITS_INDEX] == check_digits.to_s
 ```
 
-なお最初はチェックディジットだけのチェックでいいかなと思っていたんですが、チェックディジットを満たしていても、[都道](http://d.hatena.ne.jp/keyword/%C5%D4%C6%BB)府県コードがイレギュラーになるケースに後から気がつきました。
+なお最初はチェックディジットだけのチェックでいいかなと思っていたんですが、チェックディジットを満たしていても、$1府県コードがイレギュラーになるケースに後から気がつきました。
 
 ```
 '481238' # 都道府県は47までなので、こんな市区町村はない# 第1桁から第5桁までの数字に、それぞれ6.5.4.3.2を乗じて算出した積の和を求める80# その和を11で除し、商と剰余(以下「余り数字」という。)を求めて、11と余り数字との差の下1桁の数字を検査数字とする。8　　# 存在しない市区町村だけど、チェックディジットを満たす
 ```
 
-なので、[都道](http://d.hatena.ne.jp/keyword/%C5%D4%C6%BB)府県コード（`1..47`）のチェックも入っています。
+なので、$1府県コード（`1..47`）のチェックも入っています。
 
 ## 仕組み
 
-<img alt="f:id:ikmbear:20220118161859p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220118/20220118161859.png" title="" height="482" width="1200" />
+ ![f:id:ikmbear:20220118161859p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220118/20220118161859.png) 
 
 そこまで複雑なGemではないのですが、一応こういう仕組みです。
 
 [総務省｜地方行政のデジタル化｜全国地方公共団体コード](https://www.soumu.go.jp/denshijiti/code.html)
 
-情報の元は[総務省](http://d.hatena.ne.jp/keyword/%C1%ED%CC%B3%BE%CA)のこのページです。手順的には以下のような感じです。
+情報の元は$1のこのページです。手順的には以下のような感じです。
 
 1. 元データ（PDF）をGem：pdf-readerで読み取る
-2. [sqlite](http://d.hatena.ne.jp/keyword/sqlite)にぶん投げる
-3. [sqlite](http://d.hatena.ne.jp/keyword/sqlite)内でソートを行う
-4. [都道](http://d.hatena.ne.jp/keyword/%C5%D4%C6%BB)府県ごとにSELECTして[JSON](http://d.hatena.ne.jp/keyword/JSON)に出力する
-5. 出力された[JSON](http://d.hatena.ne.jp/keyword/JSON)を使って[地方公共団体](http://d.hatena.ne.jp/keyword/%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE)コードをパースする
+2. sqliteにぶん投げる
+3. sqlite内でソートを行う
+4. JSON府県ごとにSELECTしてJSONに出力する
+5. 出力されたJSONを使ってJSONコードをパースする
 
-このGemは[地方公共団体](http://d.hatena.ne.jp/keyword/%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE)コードの情報が命なので、この処理自体をRakeタスクとして登録して、[GitHub](http://d.hatena.ne.jp/keyword/GitHub) Actionsで1ヶ月に1回、自動でPRを作成する形式にしています。
+このGemはGitHubコードの情報が命なので、この処理自体をRakeタスクとして登録して、GitHub Actionsで1ヶ月に1回、自動でPRを作成する形式にしています。
 
 ## 今後の展望
 
 まだIssueにも登録していませんが、ここらへんはやりたいなと思っています。
 
-### `JpLocalGov.all` で[政令指定都市](http://d.hatena.ne.jp/keyword/%C0%AF%CE%E1%BB%D8%C4%EA%C5%D4%BB%D4)の行政区を除外する
+### `JpLocalGov.all` で$1の行政区を除外する
 
-「区」って東京のイメージが強いですが、実は各[都道](http://d.hatena.ne.jp/keyword/%C5%D4%C6%BB)府県の[政令指定都市](http://d.hatena.ne.jp/keyword/%C0%AF%CE%E1%BB%D8%C4%EA%C5%D4%BB%D4)には区があります。例えば札幌市には[中央区](http://d.hatena.ne.jp/keyword/%C3%E6%B1%FB%B6%E8)や東区があります。
+「区」って東京のイメージが強いですが、実は各$1府県の$1には区があります。例えば札幌市には$1や東区があります。
 
 市区町村を選択するのに、ここら辺を選択したい場合もあれば、「札幌市」という市区町村の単位だけがあればいいケースもあると思っています（私のアプリもそうです）。
 
-なので、これをオプションで除外できるようにしたいです。一応、[都道](http://d.hatena.ne.jp/keyword/%C5%D4%C6%BB)府県コードに続く3桁の決まりでなんとか除外できそうなので、近いうちに入ると思います。
+なので、これをオプションで除外できるようにしたいです。一応、$1府県コードに続く3桁の決まりでなんとか除外できそうなので、近いうちに入ると思います。
 
 ### YARDでドキュメントを書く
 
 `@params` とかかいてあるあれです。
 
-このGemは[RBS](http://d.hatena.ne.jp/keyword/RBS)を使っているので、それが半分ドキュメントの役割を果たしている感じもしますが、まだまだ普及率も高くないことと、自分自身が書いてみたいので、これも時間ができたらやる予定です。
+このGemはRBSを使っているので、それが半分ドキュメントの役割を果たしている感じもしますが、まだまだ普及率も高くないことと、自分自身が書いてみたいので、これも時間ができたらやる予定です。
 
-### 各[Ruby](http://d.hatena.ne.jp/keyword/Ruby)バージョンでのテストのCIを実行する
+### 各RubyバージョンでのテストのCIを実行する
 
 強いGemのCIで走っているあれです。
 
-今は[リポジトリ](http://d.hatena.ne.jp/keyword/%A5%EA%A5%DD%A5%B8%A5%C8%A5%EA)に[ruby](http://d.hatena.ne.jp/keyword/ruby)-versionをおいて、それを[GitHub](http://d.hatena.ne.jp/keyword/GitHub) Actionsで参照するようにしているのですが、これを各[Ruby](http://d.hatena.ne.jp/keyword/Ruby)バージョンで実行できるようにしたいです。
+今はrubyにruby-versionをおいて、それをGitHub Actionsで参照するようにしているのですが、これを各Rubyバージョンで実行できるようにしたいです。
 
 どうやってやるのかわからんですが。
 
@@ -265,13 +265,13 @@ CHECK_DIGITS_INDEX = 5CHECK_BASE = 11sub_total = code.chars                .take
 
 あんまり使う機会ないんですけど、なんかできたら良さそうな感じするじゃないですか。
 
-### 変更差分の[見える化](http://d.hatena.ne.jp/keyword/%B8%AB%A4%A8%A4%EB%B2%BD)
+### 変更差分の$1
 
-リリースしてからまだ時間が立ってないので、[地方公共団体](http://d.hatena.ne.jp/keyword/%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE)コードの変更は起こっていないんですが、変更が発生した場合になんかいい感じに見せられないかな〜とぼんやり思っています。
+リリースしてからまだ時間が立ってないので、$1コードの変更は起こっていないんですが、変更が発生した場合になんかいい感じに見せられないかな〜とぼんやり思っています。
 
 ## 終わりに
 
-というわけで、[地方公共団体](http://d.hatena.ne.jp/keyword/%C3%CF%CA%FD%B8%F8%B6%A6%C3%C4%C2%CE)コードをパースしてくれるGem「jp_local_gov」をリリースしたというお話でした。
+というわけで、$1コードをパースしてくれるGem「jp_local_gov」をリリースしたというお話でした。
 
 前にもnpmを作ったことはあったのですが、今回はちゃんと実践的に使えるものを作ったので、いろいろと学びも多かったし、楽しかったです😄
 
