--- a/src/content/blog/202201281643338800.md
+++ b/src/content/blog/202201281643338800.md
@@ -29,7 +29,7 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220128/2022012
 
 ## 自作Gemの話をしてきました！
 
-K-[Ruby](http://d.hatena.ne.jp/keyword/Ruby)と銀座[Rails](http://d.hatena.ne.jp/keyword/Rails)で先日作成した自作Gemの話をしてきました！
+K-Rubyと銀座Railsで先日作成した自作Gemの話をしてきました！
 
 <iframe src="https://hatenablog-parts.com/embed?url=https%3A%2F%2Fikmbear.hatenablog.com%2Fentry%2F20220118%2F1642490708" title="日本の地方公共団体コードをパースするGemをリリースしました - セットプチフォッカ" class="embed-card embed-blogcard" scrolling="no" frameborder="0" style="display: block; width: 100%; height: 190px; max-width: 500px; margin: 10px 0px;"></iframe>
 
@@ -43,15 +43,15 @@ K-[Ruby](http://d.hatena.ne.jp/keyword/Ruby)と銀座[Rails](http://d.hatena.ne.
 
 > [k-ruby.connpass.com](https://k-ruby.connpass.com/event/234964/)
 
-登壇資料はこちらです。[ポケモン](http://d.hatena.ne.jp/keyword/%A5%DD%A5%B1%A5%E2%A5%F3)青緑みたいになってます（そこは赤じゃないのかよ：銀座[Rails](http://d.hatena.ne.jp/keyword/Rails)の赤にしようと思ったけど、全面赤は目に良くないのでやめた）
+登壇資料はこちらです。Rails青緑みたいになってます（そこは赤じゃないのかよ：銀座Railsの赤にしようと思ったけど、全面赤は目に良くないのでやめた）
 
-こっちがK-[Ruby](http://d.hatena.ne.jp/keyword/Ruby)
+こっちがK-Ruby
 
 <iframe id="talk_frame_816533" class="speakerdeck-iframe" src="//speakerdeck.com/player/94052d7a155c4ed6b8fa2827e5faec13" width="710" height="399" style="aspect-ratio:710/399; border:0; padding:0; margin:0; background:transparent;" frameborder="0" allowtransparency="true" allowfullscreen="allowfullscreen" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 > [speakerdeck.com](https://speakerdeck.com/ikumatadokoro/di-fang-gong-gong-tuan-ti-kotowobian-li-nixi-utamefalsegemwozuo-tuta)
 
-こっちが銀座[Rails](http://d.hatena.ne.jp/keyword/Rails)
+こっちが銀座Rails
 
 <iframe id="talk_frame_820641" class="speakerdeck-iframe" src="//speakerdeck.com/player/812020156b2743a0b03b49eeddbcc31e" width="710" height="399" style="aspect-ratio:710/399; border:0; padding:0; margin:0; background:transparent;" frameborder="0" allowtransparency="true" allowfullscreen="allowfullscreen" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
@@ -59,8 +59,8 @@ K-[Ruby](http://d.hatena.ne.jp/keyword/Ruby)と銀座[Rails](http://d.hatena.ne.
 
 同じことを話しているので、ベースは同じなんですが、ちょっとだけまとめの方向性が違います。
 
-- K-[Ruby](http://d.hatena.ne.jp/keyword/Ruby)の方は過去のイベントの登壇資料の感じから「自分の学習成果を発表する」っていうところに重点を置いていると感じたので、感想はあっさり目に、自分が工夫したところを多めに話しています。
-- 銀座[Rails](http://d.hatena.ne.jp/keyword/Rails)の方は初のLT枠募集で、初心者の自分が貢献できるのは「エンジニア未満の人でも気軽にLT登壇していいんだ」という気持ちにプッシュするというところだと思ったので、「初心者の気持ち」に重点を置いてまとめています。
+- K-Rubyの方は過去のイベントの登壇資料の感じから「自分の学習成果を発表する」っていうところに重点を置いていると感じたので、感想はあっさり目に、自分が工夫したところを多めに話しています。
+- 銀座Railsの方は初のLT枠募集で、初心者の自分が貢献できるのは「エンジニア未満の人でも気軽にLT登壇していいんだ」という気持ちにプッシュするというところだと思ったので、「初心者の気持ち」に重点を置いてまとめています。
 
 ## プロモーション活動の成果
 
@@ -70,19 +70,19 @@ K-[Ruby](http://d.hatena.ne.jp/keyword/Ruby)と銀座[Rails](http://d.hatena.ne.
 
 気持ち的には「こういうところでの発表もチャレンジしよう！（そして登壇者特典のパーカーもらおう）」というライトな気持ちで参加したのですが、Gemの方に実利的なフィードバックもあったので、さっくりご紹介しようと思います。
 
-- [リポジトリ](http://d.hatena.ne.jp/keyword/%A5%EA%A5%DD%A5%B8%A5%C8%A5%EA)のStarが2個増えました（ありがとうございますありがとうございます🙇‍♂️）
-- 修正のPRをいただけました！[Ruby](http://d.hatena.ne.jp/keyword/Ruby) 3.0以降をサポートしていたのですが、2.7からサポートできるようになりました（リリースはまだです）
+- $1のStarが2個増えました（ありがとうございますありがとうございます🙇‍♂️）
+- 修正のPRをいただけました！Ruby 3.0以降をサポートしていたのですが、2.7からサポートできるようになりました（リリースはまだです）
 - yasulabさんから[地方公共団体コードを実際に使っている事例](https://twitter.com/yasulab/status/1485930716559196164)を教えていただけました！継続メンテのモチベーションにすごい繋がりました！
 
 ## 登壇してみて感じたこと
 
 いろいろな方に発表そのものとGemについてフィードバックをもらえたのが嬉しかったです！やっぱり言わないと伝わらないな〜とあらためて感じました！
 
-あとは銀座[Rails](http://d.hatena.ne.jp/keyword/Rails)の懇親会に初めて参加できたのも嬉しかったです！
+あとは銀座Railsの懇親会に初めて参加できたのも嬉しかったです！
 
 今までは「懇親会って緊張するし、パスかな」と思って参加したことがなかったのですが、「発表した」っていうある種の免罪符的なものがあったので、参加することができました。
 
-懇親会では[Ruby](http://d.hatena.ne.jp/keyword/Ruby)の書き方でワイワイできたり、[Rails](http://d.hatena.ne.jp/keyword/Rails)ガイドの裏側の話とかが聞けてすごく楽しかったです。発表内容と被りますけど、[Ruby](http://d.hatena.ne.jp/keyword/Ruby)っていう言語を介してつながりが広がっていく感じがとても心地よかったです！
+懇親会ではRubyの書き方でワイワイできたり、Railsガイドの裏側の話とかが聞けてすごく楽しかったです。発表内容と被りますけど、Rubyっていう言語を介してつながりが広がっていく感じがとても心地よかったです！
 
 ...あとアンケートは毎回ちゃんと書こうと思いました😅
 
@@ -114,19 +114,19 @@ K-[Ruby](http://d.hatena.ne.jp/keyword/Ruby)と銀座[Rails](http://d.hatena.ne.
 
 「経験者」の人には「初心者」の意見は新鮮だと思いますし、同じ「初心者」の人には共感がもらえると思います。
 
-また「初心者」って一口に言っても、[人間性](http://d.hatena.ne.jp/keyword/%BF%CD%B4%D6%C0%AD)は同一ではないので、同じことをやってもその人だけの切り口があります（今回の発表だと、仮に同じようにGemを作った話だとしても、心理学者の[エリクソン](http://d.hatena.ne.jp/keyword/%A5%A8%A5%EA%A5%AF%A5%BD%A5%F3)と「たのしい開発スタートアップ[Ruby](http://d.hatena.ne.jp/keyword/Ruby)」が同時に出てくる発表がカブる確立は限りなく低いはずです）。
+また「初心者」って一口に言っても、Rubyは同一ではないので、同じことをやってもその人だけの切り口があります（今回の発表だと、仮に同じようにGemを作った話だとしても、心理学者のRubyと「たのしい開発スタートアップRuby」が同時に出てくる発表がカブる確立は限りなく低いはずです）。
 
-あとは[Ruby](http://d.hatena.ne.jp/keyword/Ruby)コミュニティはやっぱり優しいので、初心者でも大丈夫って感じでしょうか。
+あとはRubyコミュニティはやっぱり優しいので、初心者でも大丈夫って感じでしょうか。
 
-私は気にしいなので、「初心者だけど優しく受け入れてくれ」っていう無償の優しさを求めるだけなのは抵抗があって、最近はRubyistHotlinks読んだり、[Rubyist](http://d.hatena.ne.jp/keyword/Rubyist)の人の古い本買ったりして読んで勉強させてもらってます（なので発表に「たのしい開発スタートアップ[Ruby](http://d.hatena.ne.jp/keyword/Ruby)」が出てくるわけですが😅）。そういう気持ちのやわらげ方もありかもです。
+私は気にしいなので、「初心者だけど優しく受け入れてくれ」っていう無償の優しさを求めるだけなのは抵抗があって、最近はRubyistHotlinks読んだり、Rubyistの人の古い本買ったりして読んで勉強させてもらってます（なので発表に「たのしい開発スタートアップRuby」が出てくるわけですが😅）。そういう気持ちのやわらげ方もありかもです。
 
 ### 同じことを何度も言うのは申し訳ないか？
 
-今回のGemの発表は短期間に2つの場所でLTをやっていて、さらにFJORD [BOOT CAMP](http://d.hatena.ne.jp/keyword/BOOT%20CAMP)内の自作サービス進捗報告会でもちょいちょい言っているので、なんとな〜く心のどっかで「みんな知っている話をするのは申し訳ない感じするな〜」と思っていました。
+今回のGemの発表は短期間に2つの場所でLTをやっていて、さらにFJORD BOOT CAMP内の自作サービス進捗報告会でもちょいちょい言っているので、なんとな〜く心のどっかで「みんな知っている話をするのは申し訳ない感じするな〜」と思っていました。
 
 実際に聞いている方がどう思われているかは別として、個人としては
 
-- 発表者[からし](http://d.hatena.ne.jp/keyword/%A4%AB%A4%E9%A4%B7)たらずっとその内容を考えていて、その流れの一つに発表があるけど、聞いている人的には別に発表の瞬間しかその内容に触れないので、重複感はそこまでないのでは？
+- 発表者$1たらずっとその内容を考えていて、その流れの一つに発表があるけど、聞いている人的には別に発表の瞬間しかその内容に触れないので、重複感はそこまでないのでは？
 - 人は結構覚えていないものなので、大事なことは何度も言った方がいい（何度も言わないと伝わらない）
 - プレゼンは「誰に」「何を」伝えたいかってのが骨子にあると思っていて、客層が変われば「誰に」が変わるので、そこらへんを意識して話し方とか情報の濃淡に手を加えると自分でも安心感が出るのでは？
 
@@ -134,19 +134,19 @@ K-[Ruby](http://d.hatena.ne.jp/keyword/Ruby)と銀座[Rails](http://d.hatena.ne.
 
 ## チャンスを掴む握力も才能って杉江さんが言ってる
 
-<img alt="f:id:ikmbear:20220128104136p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220128/20220128104136.png" title="" height="676" width="1200" />
+ ![f:id:ikmbear:20220128104136p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220128/20220128104136.png) 
 
-[SHIROBAKO](http://d.hatena.ne.jp/keyword/SHIROBAKO)っていう人生のバイブルみたいなアニメがあるんですが、その中で杉江さんがこんな言葉を言っています。
+SHIROBAKOっていう人生のバイブルみたいなアニメがあるんですが、その中で杉江さんがこんな言葉を言っています。
 
-> 僕は才能っていうのはなによりまずチャンスをつかむ握力と失敗から学べる冷静さだと思う。絵の上手い下手はその次だ。僕は僕より上手い人間がわずかな自意識過剰やつまらない遠慮のせいでチャンスをとりこぼしてきたのを何度も見た。惜しいと思うよ。未だにね。———[SHIROBAKO](http://d.hatena.ne.jp/keyword/SHIROBAKO) #22 ノアは下着です！より
+> 僕は才能っていうのはなによりまずチャンスをつかむ握力と失敗から学べる冷静さだと思う。絵の上手い下手はその次だ。僕は僕より上手い人間がわずかな自意識過剰やつまらない遠慮のせいでチャンスをとりこぼしてきたのを何度も見た。惜しいと思うよ。未だにね。———SHIROBAKO #22 ノアは下着です！より
 
 「チャンス」の定義は難しいですけど、個人的には「いつかやってみたい」と思ったことをやる機会があるなら、それはまさしく「チャンス」だと思います。
 
 私はアウトプット文化が好きということもあって、こういう発表をやってみたいと常々感じていたので、今回のチャンスを掴めたのはとてもよかったです！！
 
-## 銀座[Rails](http://d.hatena.ne.jp/keyword/Rails)もK-[Ruby](http://d.hatena.ne.jp/keyword/Ruby)もLT枠募集中みたいです！
+## 銀座RailsもK-RubyもLT枠募集中みたいです！
 
-ちょっと硬いことも書いちゃいましたが、LTはコミュニティでのコミュニケーションのきっかけにもなるし、そこからいろんな人と[Ruby](http://d.hatena.ne.jp/keyword/Ruby)のこと、それ以外のことも含めて話せるのは楽しいので、この記事が読んでいただいた方のLT参加モチベーションアップに繋がると嬉しいです！
+ちょっと硬いことも書いちゃいましたが、LTはコミュニティでのコミュニケーションのきっかけにもなるし、そこからいろんな人とRubyのこと、それ以外のことも含めて話せるのは楽しいので、この記事が読んでいただいた方のLT参加モチベーションアップに繋がると嬉しいです！
 
 <iframe src="https://hatenablog-parts.com/embed?url=https%3A%2F%2Fk-ruby.connpass.com%2Fevent%2F237132%2F" title="K-Ruby#29 LT&amp;もくもく会 (2022/03/17 19:00〜)" class="embed-card embed-webcard" scrolling="no" frameborder="0" style="display: block; width: 100%; height: 155px; max-width: 500px; margin: 10px 0px;"></iframe>
 
@@ -156,17 +156,17 @@ K-[Ruby](http://d.hatena.ne.jp/keyword/Ruby)と銀座[Rails](http://d.hatena.ne.
 
 > [ginza-rails.connpass.com](https://ginza-rails.connpass.com/event/237582/)
 
-次回の銀座[Rails](http://d.hatena.ne.jp/keyword/Rails)もK-[Ruby](http://d.hatena.ne.jp/keyword/Ruby)もまだLT枠を募集しているみたいなのでリンク貼っておきます！
+次回の銀座RailsもK-RubyもまだLT枠を募集しているみたいなのでリンク貼っておきます！
 
 ...あと最近はまたコロナが復活してきてオンライン開催が多いですが、オンラインで発表すると、100人に話しても5人に話しても感覚的に変わらないので、いいかもしれません。
 
-（[Youtube](http://d.hatena.ne.jp/keyword/Youtube)にあがっている過去の[Ruby](http://d.hatena.ne.jp/keyword/Ruby)関連のオフラインイベント見てると、リアルタイムでリアクションがあっていいなあと思ったりしますが）
+（Youtubeにあがっている過去のRuby関連のオフラインイベント見てると、リアルタイムでリアクションがあっていいなあと思ったりしますが）
 
 ## おわりに
 
 というわけでLT登壇レポでした。
 
-LT自体は初めてではなくて、FJORD [BOOT CAMP](http://d.hatena.ne.jp/keyword/BOOT%20CAMP)内でやっている「初めてのLT会」で2回、練習の機会をいただいていました。その時の参加レポはこちら
+LT自体は初めてではなくて、FJORD BOOT CAMP内でやっている「初めてのLT会」で2回、練習の機会をいただいていました。その時の参加レポはこちら
 
 <iframe src="https://hatenablog-parts.com/embed?url=https%3A%2F%2Fikmbear.hatenablog.com%2Fentry%2F2020%2F10%2F25%2F130327" title="⚡️初めてのLT会 Vol.5でRubyMineの話をしました！ - セットプチフォッカ" class="embed-card embed-blogcard" scrolling="no" frameborder="0" style="display: block; width: 100%; height: 190px; max-width: 500px; margin: 10px 0px;"></iframe>
 
@@ -176,7 +176,7 @@ LT自体は初めてではなくて、FJORD [BOOT CAMP](http://d.hatena.ne.jp/ke
 
 > [ikmbear.hatenablog.com](https://ikmbear.hatenablog.com/entry/20211219/1639875600_1)
 
-こちらの記事でも書きましたが、初めての『初めてのLT会』に参加する際には、FJORD [BOOT CAMP](http://d.hatena.ne.jp/keyword/BOOT%20CAMP)内のいろんな人に勇気をもらいました。あらためて感謝感謝です🙏
+こちらの記事でも書きましたが、初めての『初めてのLT会』に参加する際には、FJORD BOOT CAMP内のいろんな人に勇気をもらいました。あらためて感謝感謝です🙏
 
 <iframe src="https://hatenablog-parts.com/embed?url=https%3A%2F%2Fikmbear.hatenablog.com%2Fentry%2F2020%2F12%2F18%2F064703" title="アウトプットを阻むプライドと戦う〜スモールアウトプットのすすめ〜 - セットプチフォッカ" class="embed-card embed-blogcard" scrolling="no" frameborder="0" style="display: block; width: 100%; height: 190px; max-width: 500px; margin: 10px 0px;"></iframe>
 
