--- a/src/content/blog/202201301643509805.md
+++ b/src/content/blog/202201301643509805.md
@@ -14,15 +14,15 @@ description: "OSS gateにビギナーとして参加しました！"
 
 IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220130/20220130112941.png
 
-<img alt="f:id:ikmbear:20220130112941p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220130/20220130112941.png" title="" height="840" width="1200" />
+ ![f:id:ikmbear:20220130112941p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220130/20220130112941.png) 
 
 昨日 [OSS Gateオンラインワークショップ](https://oss-gate.doorkeeper.jp/events/125414) にビギナーとして参加してきました！
 
-## [OSS](http://d.hatena.ne.jp/keyword/OSS) Gateとは？（引用）
+## OSS Gateとは？（引用）
 
-> 「[OSS](http://d.hatena.ne.jp/keyword/OSS) Gate」とは[OSS](http://d.hatena.ne.jp/keyword/OSS)開発に参加していない人が参加する人に変わる「入り口」を提供する取り組みです。
+> 「OSS Gate」とはOSS開発に参加していない人が参加する人に変わる「入り口」を提供する取り組みです。
 >
-> [OSS](http://d.hatena.ne.jp/keyword/OSS)開発に未参加の人向けに参加方法を伝える場を継続的に提供することにより、[OSS](http://d.hatena.ne.jp/keyword/OSS)開発に参加する人を増やすことができるのではないか。それを実現することが「[OSS](http://d.hatena.ne.jp/keyword/OSS) Gate」という取り組みの目的です。
+> OSS開発に未参加の人向けに参加方法を伝える場を継続的に提供することにより、OSS開発に参加する人を増やすことができるのではないか。それを実現することが「OSS Gate」という取り組みの目的です。
 >
 > 参考：[OSS Gateへようこそ！](http://oss-gate.github.io/announce/update/2015/12/17/welcome-to-oss-gate.html)
 
@@ -32,11 +32,11 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220130/2022013
 
 ## 参加した理由
 
-[OSS](http://d.hatena.ne.jp/keyword/OSS) Gateのアンケートには一つだけ書いたんですが、よくよく考えると3つくらいありました。
+OSS Gateのアンケートには一つだけ書いたんですが、よくよく考えると3つくらいありました。
 
-1. いつも[OSS](http://d.hatena.ne.jp/keyword/OSS)にお世話になっているので、自分もそこに貢献したいと思ったから
-2. 2020年にCOVID-19のサイトが[OSS](http://d.hatena.ne.jp/keyword/OSS)として作成された時に、自分はIT業界で働いているのに何もできなくて、ちゃんと勉強して社会の役に立ちたいと思ったことが原点の一つとしてあるから
-3. （[OSS](http://d.hatena.ne.jp/keyword/OSS)に限らず）不満に対して文句を言うんじゃなくて、それを改善できるように生きていきたいと思っている。そのための手段としてプログラミングを学び始めたから
+1. いつもOSSにお世話になっているので、自分もそこに貢献したいと思ったから
+2. 2020年にCOVID-19のサイトがOSSとして作成された時に、自分はIT業界で働いているのに何もできなくて、ちゃんと勉強して社会の役に立ちたいと思ったことが原点の一つとしてあるから
+3. （OSSに限らず）不満に対して文句を言うんじゃなくて、それを改善できるように生きていきたいと思っている。そのための手段としてプログラミングを学び始めたから
 
 というような思いが常々あって、でもやっぱり見ず知らずの人にパッチとかIssueを送るのはちょっと気がひけるので、背中を押してもらうために参加しました。
 
@@ -44,15 +44,15 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220130/2022013
 
 イベント自体は10:30〜17:00まで、そのうち手を動かしている時間は11:00\~15:00すぎくらいまででした（途中で休憩あり）。
 
-今回はオンライン開催だったので、Discord上で作業を進めました。作業ログを見て適宜サポーターさんから[ボイスチャット](http://d.hatena.ne.jp/keyword/%A5%DC%A5%A4%A5%B9%A5%C1%A5%E3%A5%C3%A5%C8) & 後述の作業ログのコメントで「いいですね〜」「こういうところを見てみるのもいいかも」みたいなサポートをもらいつつ進める感じです。
+今回はオンライン開催だったので、Discord上で作業を進めました。作業ログを見て適宜サポーターさんから$1 & 後述の作業ログのコメントで「いいですね〜」「こういうところを見てみるのもいいかも」みたいなサポートをもらいつつ進める感じです。
 
-作業内容としては、貢献したい[OSS](http://d.hatena.ne.jp/keyword/OSS)を選んで、それを公式のドキュメントに則って動かす中で改善した方がいいこと、エラーになったことを投げるという形式だったので、私は最近利用した[Markdown](http://d.hatena.ne.jp/keyword/Markdown)を使ってスライドが作れるツールのSlidevを対象にすることにしました。
+作業内容としては、貢献したいOSSを選んで、それを公式のドキュメントに則って動かす中で改善した方がいいこと、エラーになったことを投げるという形式だったので、私は最近利用したMarkdownを使ってスライドが作れるツールのSlidevを対象にすることにしました。
 
 <iframe src="https://hatenablog-parts.com/embed?url=https%3A%2F%2Fgithub.com%2Fslidevjs%2Fslidev" title="GitHub - slidevjs/slidev: Presentation Slides for Developers (Beta)" class="embed-card embed-webcard" scrolling="no" frameborder="0" style="display: block; width: 100%; height: 155px; max-width: 500px; margin: 10px 0px;"></iframe>
 
 > [github.com](https://github.com/slidevjs/slidev)
 
-[OSS](http://d.hatena.ne.jp/keyword/OSS) Gateの特徴として、作業中は常に作業ログを取っていきます。実際に私が取った作業ログはこんな感じです。
+OSS Gateの特徴として、作業中は常に作業ログを取っていきます。実際に私が取った作業ログはこんな感じです。
 
 <iframe src="https://hatenablog-parts.com/embed?url=https%3A%2F%2Fgithub.com%2Foss-gate%2Fworkshop%2Fissues%2F1538" title="OSS Gate Workshop: Online: 2022-01-29: ikuma-t: slidev: Work log · Issue #1538 · oss-gate/workshop" class="embed-card embed-webcard" scrolling="no" frameborder="0" style="display: block; width: 100%; height: 155px; max-width: 500px; margin: 10px 0px;"></iframe>
 
@@ -70,7 +70,7 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220130/2022013
 
 というわけで実際に投げたIssueがこちらになります！
 
-<img alt="f:id:ikmbear:20220130111402p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220130/20220130111402.png" title="" height="771" width="931" />
+ ![f:id:ikmbear:20220130111402p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220130/20220130111402.png) 
 
 <iframe src="https://hatenablog-parts.com/embed?url=https%3A%2F%2Fgithub.com%2Fslidevjs%2Fslidev%2Fissues%2F469" title="The installation of playwright-chromium is different between the documentation and the error log. · Issue #469 · slidevjs/slidev" class="embed-card embed-webcard" scrolling="no" frameborder="0" style="display: block; width: 100%; height: 155px; max-width: 500px; margin: 10px 0px;"></iframe>
 
@@ -88,44 +88,44 @@ Slidevには作成したスライドのExport機能があって、これが`play
 
 午前中にさわっていた時は「エラーにはなったけど、別にログを見ればわかるからここはフィードバックポイントじゃないかな〜」と思っていたんですけど、サポーターのDaipomさんとPiroさんが書いていただいたコメントから、間接的にですが「あれ？案内している文言が違うかも」と気がつくことができました。自分でやるときはちょっとでも「ん？」と思ったところは一旦視点を変えて見つめ直すのがいいかな〜と思いました！
 
-あとはIssueの下書きが出来上がった際に、「やっていないことを書いてみると文意が伝わりやすくなるかも」「こういう返答も想定されるので、自分のお気持ちも書いておくといいかも」といったアド[バイス](http://d.hatena.ne.jp/keyword/%A5%D0%A5%A4%A5%B9)をもらうことができました。前にkoicさんの動画でみたと思うんですが、「なぜそれを取り込む必要があるのか」「そのための判断材料」を意識して書いていくのがやっぱり大切なんだと、自分でやってみて感じました✍️
+あとはIssueの下書きが出来上がった際に、「やっていないことを書いてみると文意が伝わりやすくなるかも」「こういう返答も想定されるので、自分のお気持ちも書いておくといいかも」といったアド$1をもらうことができました。前にkoicさんの動画でみたと思うんですが、「なぜそれを取り込む必要があるのか」「そのための判断材料」を意識して書いていくのがやっぱり大切なんだと、自分でやってみて感じました✍️
 
 ## 前提知識として何が必要か？
 
-「[OSS](http://d.hatena.ne.jp/keyword/OSS)を動かした際のポイントをフィードバックする」というプログラムなので、その[OSS](http://d.hatena.ne.jp/keyword/OSS)に対してめちゃくちゃ詳しくないといけないということはないかな〜という印象です。
+「OSSを動かした際のポイントをフィードバックする」というプログラムなので、そのOSSに対してめちゃくちゃ詳しくないといけないということはないかな〜という印象です。
 
 技術的な前提としては
 
-- Git / [GitHub](http://d.hatena.ne.jp/keyword/GitHub)が使える
+- Git / GitHubが使える
 - 黒い画面が使える
 
 ってところですかね。実際私も、ブラウザでドキュメント読む→ターミナルでインストールする→ブラウザ上でIssueを立てるって感じでした。
 
-あとは対象となる[OSS](http://d.hatena.ne.jp/keyword/OSS)を自分で決める必要があるので、最近使ったアプリをちょっと思い出しておくといいかもです（私は当日ふと頭に出たのでSlidevにしましたが、Gemとかでもよかったかも）。なお[OSS](http://d.hatena.ne.jp/keyword/OSS)かどうか、Issueをたてるポイントがありそうかは、プログラムの中で確認するので事前チェックは不要です。
+あとは対象となるOSSを自分で決める必要があるので、最近使ったアプリをちょっと思い出しておくといいかもです（私は当日ふと頭に出たのでSlidevにしましたが、Gemとかでもよかったかも）。なおOSSかどうか、Issueをたてるポイントがありそうかは、プログラムの中で確認するので事前チェックは不要です。
 
 ## 感想
 
 参加する前は「本当にこの時間内でIssueを立てられるのかな？」と内心不安だったんですが、本当に立てることができて、驚き & とても嬉しかったです！
 
-[OSS](http://d.hatena.ne.jp/keyword/OSS) Gateの目的として「自分1人でも[OSS](http://d.hatena.ne.jp/keyword/OSS)に参加できるようになる（気持ちになる）」という点があるのですが、今回実際にIssueを立てることでこれからもやっていけそうだな！と感じました。
+OSS Gateの目的として「自分1人でもOSSに参加できるようになる（気持ちになる）」という点があるのですが、今回実際にIssueを立てることでこれからもやっていけそうだな！と感じました。
 
-（...実際に[OSS](http://d.hatena.ne.jp/keyword/OSS) Gate終了後に今回扱ったSlidevの別件の対応の準備を始めました💪）
+（...実際にOSS Gate終了後に今回扱ったSlidevの別件の対応の準備を始めました💪）
 
-[OSS](http://d.hatena.ne.jp/keyword/OSS)貢献へのあと一歩が踏み出せなかった理由に「こんなんで大丈夫なのかな？」という気持ちがきっとあったのですが、今回サポーターの皆さんに自分のやっていることを「承認」してもらえたり、「客観視」した上でアド[バイス](http://d.hatena.ne.jp/keyword/%A5%D0%A5%A4%A5%B9)をもらえたことで、自分1人の中に沈み込んでいた不安が大きく開けた気持になりました！
+OSS貢献へのあと一歩が踏み出せなかった理由に「こんなんで大丈夫なのかな？」という気持ちがきっとあったのですが、今回サポーターの皆さんに自分のやっていることを「承認」してもらえたり、「客観視」した上でアドOSSをもらえたことで、自分1人の中に沈み込んでいた不安が大きく開けた気持になりました！
 
-今回の挑戦をステップに、どんどん[OSS](http://d.hatena.ne.jp/keyword/OSS)の世界を楽しみたいと思えるイベントでした！サポートいただいた皆さん、ありがとうございました！！！！😊
+今回の挑戦をステップに、どんどんOSSの世界を楽しみたいと思えるイベントでした！サポートいただいた皆さん、ありがとうございました！！！！😊
 
 ---
 
 **余談**
 
-...当日Piroさんに言えなかったんですけど、「シス管系女子全部持ってます！初めて[Linux](http://d.hatena.ne.jp/keyword/Linux)の勉強する時に買いました！」とここに書き残しておきます😅
+...当日Piroさんに言えなかったんですけど、「シス管系女子全部持ってます！初めてLinuxの勉強する時に買いました！」とここに書き残しておきます😅
 
-<img alt="f:id:ikmbear:20220130111448p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220130/20220130111448.png" title="" height="272" width="1059" />
+ ![f:id:ikmbear:20220130111448p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220130/20220130111448.png) 
 
-## おわりに：次回[OSS](http://d.hatena.ne.jp/keyword/OSS) Gateのご案内と気になる方へ
+## おわりに：次回OSS Gateのご案内と気になる方へ
 
-[OSS](http://d.hatena.ne.jp/keyword/OSS) Gateは定期的に開催されていて次回は3/8みたいです。
+OSS Gateは定期的に開催されていて次回は3/8みたいです。
 
 <iframe src="https://hatenablog-parts.com/embed?url=https%3A%2F%2Foss-gate.doorkeeper.jp%2Fevents%2F129871" title="OSS Gateオンラインワークショップ2022-03-08【平日開催】" class="embed-card embed-webcard" scrolling="no" frameborder="0" style="display: block; width: 100%; height: 155px; max-width: 500px; margin: 10px 0px;"></iframe>
 
@@ -139,4 +139,4 @@ Slidevには作成したスライドのExport機能があって、これが`play
 > - 実際に「サポーター」の登録者が1人増えたら繰り上がります。
 > - どの「サポーター」がどの「サポーターを1人以上連れてくるビギナー」に対応しているかはわからないので一番最初に登録していた「サポーターを1人以上連れてくるビギナー」が繰り上がります。
 
-もし「[OSS](http://d.hatena.ne.jp/keyword/OSS) Gate興味あるけど、枠もいっぱいだし...」という方がいたら、次回開催に限らず、お声がけいただければサポーターとして参加しようと思うので、コメント欄でも[Twitter](http://d.hatena.ne.jp/keyword/Twitter)でもお気軽にご連絡ください！
+もし「OSS Gate興味あるけど、枠もいっぱいだし...」という方がいたら、次回開催に限らず、お声がけいただければサポーターとして参加しようと思うので、コメント欄でもTwitterでもお気軽にご連絡ください！
