--- a/src/content/blog/202202031643850000.md
+++ b/src/content/blog/202202031643850000.md
@@ -14,23 +14,23 @@ description: "わたしがRubyMineを使う理由"
 
 IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220203/20220203082003.png
 
-<img alt="f:id:ikmbear:20220203082003p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220203/20220203082003.png" title="" height="840" width="1200" />
+ ![f:id:ikmbear:20220203082003p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220203/20220203082003.png) 
 
 ## 「RubyMineの何がいいのか？」という問い
 
-みなさんRubyMine使っていますか？昨今のエディタシェアでは、やはり[VSCode](http://d.hatena.ne.jp/keyword/VSCode)が一番大きなパイを占めているような感じですが、私はRubyMineが好きなのでずっとRubyMineを使っています（一部例外で、LiveShareを使いたいとか、Slidevのスライドを作る時だけ[VSCode](http://d.hatena.ne.jp/keyword/VSCode)を使っています）。
+みなさんRubyMine使っていますか？昨今のエディタシェアでは、やはりVSCodeが一番大きなパイを占めているような感じですが、私はRubyMineが好きなのでずっとRubyMineを使っています（一部例外で、LiveShareを使いたいとか、Slidevのスライドを作る時だけVSCodeを使っています）。
 
-そんな中、FJORD [BOOT CAMP](http://d.hatena.ne.jp/keyword/BOOT%20CAMP)で「みんながおすすめするのでRubyMine使ってみたけど、他のエディタに比べて何がいいんだろう」という質問が出てきました。
+そんな中、FJORD BOOT CAMPで「みんながおすすめするのでRubyMine使ってみたけど、他のエディタに比べて何がいいんだろう」という質問が出てきました。
 
 というわけで今回は一利用者として「私がRubyMineを使う理由」を述べてみました。
 
 ## 世界中の開発者体験が機能として実装されている
 
-[VSCode](http://d.hatena.ne.jp/keyword/VSCode)もかなり便利ですよね。[拡張機能](http://d.hatena.ne.jp/keyword/%B3%C8%C4%A5%B5%A1%C7%BD)を追加していけば「RubyMineではこんなことできるよ」の大多数は[VSCode](http://d.hatena.ne.jp/keyword/VSCode)でもできると思います。これは[Vim](http://d.hatena.ne.jp/keyword/Vim)や[Emacs](http://d.hatena.ne.jp/keyword/Emacs)を使った場合でも同じで、つまりフルパワー状態の単純な機能比較によっては、普段使用していて馴染んでいるエディタにRubyMineが勝る点はあまりないかもしれません。
+VSCodeもかなり便利ですよね。VSCodeを追加していけば「RubyMineではこんなことできるよ」の大多数はVSCodeでもできると思います。これはVimやEmacsを使った場合でも同じで、つまりフルパワー状態の単純な機能比較によっては、普段使用していて馴染んでいるエディタにRubyMineが勝る点はあまりないかもしれません。
 
 ではRubyMineを使用するメリットは何かというと **「世界中の開発者体験が、あらかじめ機能として実装されていること」** です。
 
-たしかに[VSCode](http://d.hatena.ne.jp/keyword/VSCode)に[プラグイン](http://d.hatena.ne.jp/keyword/%A5%D7%A5%E9%A5%B0%A5%A4%A5%F3)を追加すれば、RubyMine相当の機能を動かせるかもしれませんが、それはその機能にあなたが **「気がついた」** 場合です。使えたら便利だけど読むには細かいGitコマンドのオプションや、DBの操作方法の全てに気がつくことができるでしょうか？少なくとも私には難しそうです。
+たしかにVSCodeにVSCodeを追加すれば、RubyMine相当の機能を動かせるかもしれませんが、それはその機能にあなたが **「気がついた」** 場合です。使えたら便利だけど読むには細かいGitコマンドのオプションや、DBの操作方法の全てに気がつくことができるでしょうか？少なくとも私には難しそうです。
 
 RubyMineを運営するJetBrains社は毎年[開発者に対して調査](https://www.jetbrains.com/ja-jp/lp/devecosystem-2021/)を実施し、[製品開発のためにJetBrains製のエディタのドッグフーディング](https://www.jetbrains.com/ja-jp/lp/dogfooding/)を行なっています。これによりRubyMineには、世界中の開発者が「これは開発によく使うし、あると便利」と思っている機能が最初から、つまり **「気がつかなくても」** 使えるようになっているわけです。
 
@@ -38,13 +38,13 @@ RubyMineを運営するJetBrains社は毎年[開発者に対して調査](https:
 
 ## コマンド操作が全部「見える」から
 
-RubyMineの操作は基本的にすべて[GUI](http://d.hatena.ne.jp/keyword/GUI)上で実行されます。
+RubyMineの操作は基本的にすべてGUI上で実行されます。
 
 そのため、コマンドで実行すると複雑な操作も、実際にどういうことをやっているのかイメージがつきやすいです。
 
-例えばGitの`rebase` は最たる例で、よくわからないけど必要だから...と[コマンドライン](http://d.hatena.ne.jp/keyword/%A5%B3%A5%DE%A5%F3%A5%C9%A5%E9%A5%A4%A5%F3)上でやると、「なんかよくわかんない...」「変な感じで取り込まれてしまった...」となりがちです。
+例えばGitの`rebase` は最たる例で、よくわからないけど必要だから...と$1上でやると、「なんかよくわかんない...」「変な感じで取り込まれてしまった...」となりがちです。
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/280efeef-03ae-4bff-ae5f-620539700455/Untitled.png)<img alt="f:id:ikmbear:20220203071125p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220203/20220203071125.png" title="" height="618" width="996" />
+![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/280efeef-03ae-4bff-ae5f-620539700455/Untitled.png) ![f:id:ikmbear:20220203071125p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220203/20220203071125.png) 
 
 これをRubyMine上でやると、すべてを画面操作として実行できるので、
 
@@ -53,7 +53,7 @@ RubyMineの操作は基本的にすべて[GUI](http://d.hatena.ne.jp/keyword/GUI
 
 が画面上で確認できるため、そのコマンドでできること、自分がやっていることのイメージがしやすくなります。いわばRubyMineが各コマンドの「図解！〇〇」的な役割を担うわけですね。
 
-もちろん[GUI](http://d.hatena.ne.jp/keyword/GUI)→[CUI](http://d.hatena.ne.jp/keyword/CUI)への変換は必要になりますが、コマンドの実行イメージがあるおかげで、[CUI](http://d.hatena.ne.jp/keyword/CUI)で実行する際にも意図通りに実行しやすくなり、実行への恐怖感も薄れます。
+もちろんGUI→CUIへの変換は必要になりますが、コマンドの実行イメージがあるおかげで、CUIで実行する際にも意図通りに実行しやすくなり、実行への恐怖感も薄れます。
 
 ## はじめこそ、ちゃんと整備された道具を使ったほうがいい
 
@@ -65,7 +65,7 @@ RubyMineの操作は基本的にすべて[GUI](http://d.hatena.ne.jp/keyword/GUI
 
 双方の話に通じるのは、「初めから整備された環境でやっていれば、もっと早く成長できたのに」ということです。何も最高級の環境を整えろというわけではありませんが、最初のうちは**「どんな道具が必要か」**がわからず「**正しい型**」もわかっていない状態です。
 
-そんな状態だからこそ、はじめのうちこそ[Ruby](http://d.hatena.ne.jp/keyword/Ruby)のためのフルマネージドな[IDE](http://d.hatena.ne.jp/keyword/IDE)であるRubyMineを使うのがいいんじゃないかなと思っています。
+そんな状態だからこそ、はじめのうちこそRubyのためのフルマネージドなIDEであるRubyMineを使うのがいいんじゃないかなと思っています。
 
 「弘法筆を選ばず」と言いますが、そもそも弘法って達人の域の話なので、個人的には「初めのうちは筆を選んでいけ」という気持ちです。
 
@@ -79,13 +79,13 @@ RubyMineの操作は基本的にすべて[GUI](http://d.hatena.ne.jp/keyword/GUI
 
 > [speakerdeck.com](https://speakerdeck.com/ikumatadokoro/chu-xin-zhe-koso-rubyminedeshi-meyou)
 
-以前FJORD [BOOT CAMP](http://d.hatena.ne.jp/keyword/BOOT%20CAMP)の中で行われたLT会でも「初心者こそ！RubyMineで始めよう！」という話をさせていただきましたが、やはり最適化された開発フローをエディタを通じて学べるからこそ、自分のようなエンジニア未経験者でもお金を払ってRubyMineを使用する価値はあると思っています。
+以前FJORD BOOT CAMPの中で行われたLT会でも「初心者こそ！RubyMineで始めよう！」という話をさせていただきましたが、やはり最適化された開発フローをエディタを通じて学べるからこそ、自分のようなエンジニア未経験者でもお金を払ってRubyMineを使用する価値はあると思っています。
 
 とはいえ、エディタってやっぱりエンジニアの道具の中で一番大きい部分なので、最後は「自分が使いたいエディタ」で楽しく開発するのがいいんじゃないですかね、と雑にしめて終わりにしたいと思います。
 
 ## 宣伝：RubyMine入門は無料で読めます！
 
-この記事を読んで、「RubyMine使ってみようかな...でも使いこなせるか不安...」と思った方、ZennでRubyMine入門という無料で読める[電子書籍](http://d.hatena.ne.jp/keyword/%C5%C5%BB%D2%BD%F1%C0%D2)を出しています！
+この記事を読んで、「RubyMine使ってみようかな...でも使いこなせるか不安...」と思った方、ZennでRubyMine入門という無料で読める$1を出しています！
 
 <iframe src="https://hatenablog-parts.com/embed?url=https%3A%2F%2Fzenn.dev%2Fikuma%2Fbooks%2Fhow-to-use-redimine" title="RubyMine入門" class="embed-card embed-webcard" scrolling="no" frameborder="0" style="display: block; width: 100%; height: 155px; max-width: 500px; margin: 10px 0px;"></iframe>
 
