--- a/src/content/blog/202202041643936692.md
+++ b/src/content/blog/202202041643936692.md
@@ -18,7 +18,7 @@ description: "Steepで使えるコマンドを見てみよう"
 
 > [speakerdeck.com](https://speakerdeck.com/ikumatadokoro/steepdeshi-erukomandowojian-temiyou)
 
-昨日omotesando.rb#71で話したネタです。元々はRails7から追加されたActiveModel::[API](http://d.hatena.ne.jp/keyword/API)の話をしようと思っていたんですが、資料作ろうと思った翌日にTechRachoで紹介されていたのでやめました。
+昨日omotesando.rb#71で話したネタです。元々はRails7から追加されたActiveModel::APIの話をしようと思っていたんですが、資料作ろうと思った翌日にTechRachoで紹介されていたのでやめました。
 
 資料にも書いたのですが、RubyMineでLSPがうまく起動できませんでした...。
 
