--- a/src/content/blog/20200722194545.md
+++ b/src/content/blog/20200722194545.md
@@ -37,37 +37,37 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200722/2020072
 
 ## はじめに
 
-この度[フィヨルドブートキャンプ](https://bootcamp.fjord.jp/)というプログラミングスクールに参加しました。本業（[SIer](http://d.hatena.ne.jp/keyword/SIer)）との両立で大変なところもありますが、エンジニアとしてのスキルを伸ばすべく頑張ります！
+この度[フィヨルドブートキャンプ](https://bootcamp.fjord.jp/)というプログラミングスクールに参加しました。本業（SIer）との両立で大変なところもありますが、エンジニアとしてのスキルを伸ばすべく頑張ります！
 
 ## プログラミングスクールに入るまでの経緯
 
 ### プログラミングとの出会い（2017/12〜2019/12）
 
-先の通り、私の本業は[SIer](http://d.hatena.ne.jp/keyword/SIer)で現在入社3年目（新卒から入った会社です）。内容は業務コンサルよりな仕事です。
+先の通り、私の本業はSIerで現在入社3年目（新卒から入った会社です）。内容は業務コンサルよりな仕事です。
 
-[SIer](http://d.hatena.ne.jp/keyword/SIer)に入社こそしていますが、大学の学部は文系だったため、プログラミングに本格的に出会ったのは就職活動の時でした。ネットワーク系の[ベンチャー](http://d.hatena.ne.jp/keyword/%A5%D9%A5%F3%A5%C1%A5%E3%A1%BC)での計3日ほどの[インターン](http://d.hatena.ne.jp/keyword/%A5%A4%A5%F3%A5%BF%A1%BC%A5%F3)で、完全にこのITの世界にハマり[SIer](http://d.hatena.ne.jp/keyword/SIer)に就職。
+SIerに入社こそしていますが、大学の学部は文系だったため、プログラミングに本格的に出会ったのは就職活動の時でした。ネットワーク系のSIerでの計3日ほどのSIerで、完全にこのITの世界にハマりSIerに就職。
 
-ただこの時は特にプログラミングをやっておらず、一方で技術を理解して伝えるという点に強みを感じていたため、「〇〇 × IT」、つまり「自分は〇〇を解決するために、ITという手段をうまく使う人」という考えで、コンサルよりの[SIer](http://d.hatena.ne.jp/keyword/SIer)を選びました。
+ただこの時は特にプログラミングをやっておらず、一方で技術を理解して伝えるという点に強みを感じていたため、「〇〇 × IT」、つまり「自分は〇〇を解決するために、ITという手段をうまく使う人」という考えで、コンサルよりのSIerを選びました。
 
-入社してから1\~2年目は、研修含めて[Java](http://d.hatena.ne.jp/keyword/Java)を習得。業務知識も順調に習得し、現場ではコンサルしながら、[デバッグ](http://d.hatena.ne.jp/keyword/%A5%C7%A5%D0%A5%C3%A5%B0)してバグを直しと個人的にめちゃくちゃ充実した日々を送っていました。  
-このとき「ああ、私は[SIer](http://d.hatena.ne.jp/keyword/SIer)の[大谷翔平](http://d.hatena.ne.jp/keyword/%C2%E7%C3%AB%E6%C6%CA%BF)[\*1](#f-2f1eacaf)になるんだな」と確信しました。
+入社してから1\~2年目は、研修含めてJavaを習得。業務知識も順調に習得し、現場ではコンサルしながら、Javaしてバグを直しと個人的にめちゃくちゃ充実した日々を送っていました。  
+このとき「ああ、私はSIerのSIer[\*1](#f-2f1eacaf)になるんだな」と確信しました。
 
 ### プログラミングとの別れ（2020/1〜）
 
 一つ目のPJを有終の美で終えたのち、次のPJに入ったところで突然プログラミングとの別れがきました（あくまで最初のプログラミングはお試し期間だったようです）。  
-でも大丈夫、私には[SQL](http://d.hatena.ne.jp/keyword/SQL)がついているじゃないか。batじいさんだっているんだ、ちょっとしたツールを作る喜びはある!  
-[大谷翔平](http://d.hatena.ne.jp/keyword/%C2%E7%C3%AB%E6%C6%CA%BF)だって怪我しても、ホームラン打ってますし。
+でも大丈夫、私にはSQLがついているじゃないか。batじいさんだっているんだ、ちょっとしたツールを作る喜びはある!  
+$1だって怪我しても、ホームラン打ってますし。
 
-しかしCASE文と[パーティション](http://d.hatena.ne.jp/keyword/%A5%D1%A1%BC%A5%C6%A5%A3%A5%B7%A5%E7%A5%F3)での一人遊びはそう長く続きません。
+しかしCASE文と$1での一人遊びはそう長く続きません。
 
-Qiitaに、メルカリ、[クックパッド](http://d.hatena.ne.jp/keyword/%A5%AF%A5%C3%A5%AF%A5%D1%A5%C3%A5%C9)、どんどん増えていく若手エントリー。  
+Qiitaに、メルカリ、$1、どんどん増えていく若手エントリー。  
 増える手取り、感じる焦り、一人始めるProgate。
 
 ### 独学時代（2020/2〜6）
 
 最初の一年をかなり飛ばしていたおかげで、燃えつき症候群&時間を持て余していたので、Progateに粛々と挑戦。
 
-<img alt="f:id:ikmbear:20200722142831p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200722/20200722142831.png" title="" height="1200" width="416" />Progate
+ ![f:id:ikmbear:20200722142831p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200722/20200722142831.png) Progate
 
 1ヶ月ほどでいわゆるWeb系っぽいおおよそのコースはクリア。
 
@@ -85,17 +85,17 @@ Qiitaのハンズオン系記事に飛びつく期間が続きますが、
 
 と壁にぶつかるのでした。
 
-もちろん[Java](http://d.hatena.ne.jp/keyword/Java)をやっていたわけですから、[Ruby](http://d.hatena.ne.jp/keyword/Ruby)とか[Rails](http://d.hatena.ne.jp/keyword/Rails)をやってみても、各メソッドがどう関連して作用していくのかは理解できました。  
-ただ、[Java](http://d.hatena.ne.jp/keyword/Java)をやっているときは「すでに出来上がっているアプリに、改修を加えていく」という作業だったため、フロントエンドやインフラの細かい点を意識せず、サーバサイド の具体的なロジックをどうするかだけ考えればよかったんですよね。  
+もちろんJavaをやっていたわけですから、RubyとかRailsをやってみても、各メソッドがどう関連して作用していくのかは理解できました。  
+ただ、Javaをやっているときは「すでに出来上がっているアプリに、改修を加えていく」という作業だったため、フロントエンドやインフラの細かい点を意識せず、サーバサイド の具体的なロジックをどうするかだけ考えればよかったんですよね。  
 一から作る場合は、インフラ含めたそのロジックが作用する土台や、見た目を作っていく必要があるので、そこの前提知識が全然足りなかったのかなと思っています。
 
 ### キャンプイン（2020/7〜）
 
 「このままではずっと同じところから抜け出せないなあ、でもどうやって勉強進めたらいいかわからないなあ」  
-そんな現状を打破すべく、[フィヨルド](http://d.hatena.ne.jp/keyword/%A5%D5%A5%A3%A5%E8%A5%EB%A5%C9)ブートキャンプにキャンプイン。
+そんな現状を打破すべく、$1ブートキャンプにキャンプイン。
 
 選定理由は雰囲気です。  
-やっぱり学習をしていく上で、このコミュニティでやっていくのはしんどいな、と思うことがあっては続かないと思うんですよ。じゃあどうやってそれを判断するかといったら、私の場合は雰囲気、フィーリングなんです。<img alt="f:id:ikmbear:20200722162914p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200722/20200722162914.png" title="" height="1033" width="1200" />これが[フィヨルド](http://d.hatena.ne.jp/keyword/%A5%D5%A5%A3%A5%E8%A5%EB%A5%C9)ブートキャンプのホームページですけど、この画像をみて「怪しいな」「弱そう」「かわいい」「優しそう」といろんな感じ方ができるかと思います。  
+やっぱり学習をしていく上で、このコミュニティでやっていくのはしんどいな、と思うことがあっては続かないと思うんですよ。じゃあどうやってそれを判断するかといったら、私の場合は雰囲気、フィーリングなんです。 ![f:id:ikmbear:20200722162914p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200722/20200722162914.png) これが$1ブートキャンプのホームページですけど、この画像をみて「怪しいな」「弱そう」「かわいい」「優しそう」といろんな感じ方ができるかと思います。  
 私はこれをみて「なんか優しい雰囲気そうだな、やっていけそうだな」と思ったのでこれにしました。
 
 みすず理論ってやつですね（私が勝手に呼んでるだけですが）。
@@ -111,9 +111,9 @@ Qiitaのハンズオン系記事に飛びつく期間が続きますが、
 ここが今のところ、一番大きいです。  
 自分の場合は、「プログラミングはできるようになりたい。自分で勉強もできる。けれど、学ぶべき技術が幅広すぎて、どこから手をつけていいかわからない」という悩みがありましたが、カリキュラムがあるキャンプに入ることはこの悩みを直接的に解決してくれました。
 
-成長[マインドセット](http://d.hatena.ne.jp/keyword/%A5%DE%A5%A4%A5%F3%A5%C9%A5%BB%A5%C3%A5%C8)という本に、「進むべき道でブレーキを踏んでしまうことは、成長を阻害する要因の一つ」という一節があります。
+成長$1という本に、「進むべき道でブレーキを踏んでしまうことは、成長を阻害する要因の一つ」という一節があります。
 
-<img alt="f:id:ikmbear:20200722165117p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200722/20200722165117.png" title="" height="1200" width="806" />　[\*2](#f-b22bb704)
+ ![f:id:ikmbear:20200722165117p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20200722/20200722165117.png) 　[\*2](#f-b22bb704)
 
 [https://www.amazon.co.jp/%E6%88%90%E9%95%B7%E3%83%9E%E3%82%A4%E3%83%B3%E3%83%89%E3%82%BB%E3%83%83%E3%83%88-%E5%90%89%E7%94%B0-%E8%A1%8C%E5%AE%8F-ebook/dp/B07CBTDJ5F](https://www.amazon.co.jp/%E6%88%90%E9%95%B7%E3%83%9E%E3%82%A4%E3%83%B3%E3%83%89%E3%82%BB%E3%83%83%E3%83%88-%E5%90%89%E7%94%B0-%E8%A1%8C%E5%AE%8F-ebook/dp/B07CBTDJ5F)
 
@@ -124,7 +124,7 @@ Qiitaのハンズオン系記事に飛びつく期間が続きますが、
 
 ### 自走のための環境が整っている
 
-[フィヨルド](http://d.hatena.ne.jp/keyword/%A5%D5%A5%A3%A5%E8%A5%EB%A5%C9)ブートキャンプでは、演習に対して提出物があるものの、そこに至るステップを明確に規定しません。代わりに参考書籍・サイト、ドキュメントなどが課題ページに書いてあるので、自分で必要なものを選んで学習し、課題に挑みます。
+$1ブートキャンプでは、演習に対して提出物があるものの、そこに至るステップを明確に規定しません。代わりに参考書籍・サイト、ドキュメントなどが課題ページに書いてあるので、自分で必要なものを選んで学習し、課題に挑みます。
 
 もちろんそれだけでは足りないこともあるので、キャンプ内の生徒・メンター全員がみられるQ&Aや他の人の日報を参考にしながら進めます。
 
@@ -136,11 +136,11 @@ Qiitaのハンズオン系記事に飛びつく期間が続きますが、
 
 物事に絶対はないので、カリキュラムを充実させることにももちろんメリットがあります。
 
-- スクール側は運営が楽になり、スケールさせやすい。すると、生徒の環境に資金投下もしやすい（[フィヨルド](http://d.hatena.ne.jp/keyword/%A5%D5%A5%A3%A5%E8%A5%EB%A5%C9)ブートキャンプの場合は、メンターさんの頑張りで支えられている感じがします。そして生徒さんの間でも支え合いの概念が浸透しているように思います）。
+- スクール側は運営が楽になり、スケールさせやすい。すると、生徒の環境に資金投下もしやすい（$1ブートキャンプの場合は、メンターさんの頑張りで支えられている感じがします。そして生徒さんの間でも支え合いの概念が浸透しているように思います）。
 - 生徒としても、カリキュラムをやることで一定のレベルが保証される（自分で考える余地があるということは、やらなかったら当然力にならない）
 
 ここは考え方次第です。私の場合は自分で自走したいけれど、先の通り、どう進めればいいかわからないという悩みを解決したかったので、キャンプのシステムがあっているかなと。  
-小[さいころ](http://d.hatena.ne.jp/keyword/%A4%B5%A4%A4%A4%B3%A4%ED)から大手塾が苦手で、受験の時だけ基本放置なこじんまりした塾に通っていて結果が出ていたので、そういう人間なのかも。
+小$1から大手塾が苦手で、受験の時だけ基本放置なこじんまりした塾に通っていて結果が出ていたので、そういう人間なのかも。
 
 ## 入ってみてよかったこと（副産物編）
 
@@ -165,19 +165,19 @@ Qiitaのハンズオン系記事に飛びつく期間が続きますが、
 
 とすることで時間を確保しています。時間を確保するためには早起きしないといけないので、必然的に生活リズムがよくなりました。ついでにいうと、仕事も切り上げないと勉強できないので、タスク管理も今まで以上にテキパキやっています（感覚ですが）。
 
-ちなみにキャンプではslackに学習用チャンネルがあり、そこで「朝の[もくもく会](http://d.hatena.ne.jp/keyword/%A4%E2%A4%AF%A4%E2%A4%AF%B2%F1)」を開催してくださっている生徒の方がいらっしゃるので、私も便乗してなんとか朝の習慣を続けています。
+ちなみにキャンプではslackに学習用チャンネルがあり、そこで「朝の$1」を開催してくださっている生徒の方がいらっしゃるので、私も便乗してなんとか朝の習慣を続けています。
 
 ### slack文化に慣れる
 
-本業の方でもslackはあるのですが、基本的にメール文化です。すると、slackを使ったやりとりに[心理的](http://d.hatena.ne.jp/keyword/%BF%B4%CD%FD%C5%AA)ハードルがあるんですよね。
+本業の方でもslackはあるのですが、基本的にメール文化です。すると、slackを使ったやりとりに$1ハードルがあるんですよね。
 
 私も最初は会ったことのない人にチャットをするのは緊張しましたが、慣れました。  
-[SIer](http://d.hatena.ne.jp/keyword/SIer)から転職ありきでプログラミングスクールに入るのであれば、Web系ではslackは当たり前に使われていると思うので、練習できる場があるのは嬉しいかな〜と個人的に。
+SIerから転職ありきでプログラミングスクールに入るのであれば、Web系ではslackは当たり前に使われていると思うので、練習できる場があるのは嬉しいかな〜と個人的に。
 
 ## 最後に
 
-まずは本業とキャンプの両立を維持しながら、コツコツとプ[ラク](http://d.hatena.ne.jp/keyword/%A5%E9%A5%AF)ティスを進めていきたいと思います。やっていく中で、学んだこと、感じたこと、時々フォッカチオ作りをこのブログに描ければなと思います。
+まずは本業とキャンプの両立を維持しながら、コツコツとプ$1ティスを進めていきたいと思います。やっていく中で、学んだこと、感じたこと、時々フォッカチオ作りをこのブログに描ければなと思います。
 
-[\*1](#fn-2f1eacaf):プログラミングと業務コンサルの二刀流ということ、一般的にはどちらかの[スペシャ](http://d.hatena.ne.jp/keyword/%A5%B9%A5%DA%A5%B7%A5%E3)リストを目指す
+[\*1](#fn-2f1eacaf):プログラミングと業務コンサルの二刀流ということ、一般的にはどちらかの$1リストを目指す
 
-[\*2](#fn-b22bb704):成長[マインドセット](http://d.hatena.ne.jp/keyword/%A5%DE%A5%A4%A5%F3%A5%C9%A5%BB%A5%C3%A5%C8) 図17より引用
+[\*2](#fn-b22bb704):成長$1 図17より引用
