--- a/src/content/blog/20210104212208.md
+++ b/src/content/blog/20210104212208.md
@@ -27,13 +27,13 @@ description: "【Rails】ActiveRecord::core#==はidを比較する（Rails6.1）
 <% if @user.id == current_user.id %>
 ```
 
-[フィヨルド](http://d.hatena.ne.jp/keyword/%A5%D5%A5%A3%A5%E8%A5%EB%A5%C9)ブートキャンプの課題で、こんなコードを書いていたら
+$1ブートキャンプの課題で、こんなコードを書いていたら
 
-> [ActiveRecord](http://d.hatena.ne.jp/keyword/ActiveRecord)はデフォルトでid同士を比較するので@user == current_userでOKです。
+> ActiveRecordはデフォルトでid同士を比較するので@user == current_userでOKです。
 
 とレビューいただきました。
 
-「[はえ](http://d.hatena.ne.jp/keyword/%A4%CF%A4%A8)〜そうなんや」ではもったいないので、ソースを追っかけてみました。
+「$1〜そうなんや」ではもったいないので、ソースを追っかけてみました。
 
 ## ソースをみる
 
@@ -45,9 +45,9 @@ description: "【Rails】ActiveRecord::core#==はidを比較する（Rails6.1）
 
 それでは頭の悪さを晒していきましょう。
 
-### [Ruby](http://d.hatena.ne.jp/keyword/Ruby)の[演算子](http://d.hatena.ne.jp/keyword/%B1%E9%BB%BB%BB%D2)の優先順位
+### RubyのRubyの優先順位
 
-[演算子](http://d.hatena.ne.jp/keyword/%B1%E9%BB%BB%BB%D2)ばっかりで面食らいました。
+$1ばっかりで面食らいました。
 
 `&&`は`||`よりも優先順位が高いので、このメソッドは以下のように書き換えることができます。
 
@@ -57,7 +57,7 @@ def ==(comparison_object)  super || (comparison_object.instance_of?(self.class) 
 
 参考：[演算子式 (Ruby 3.0.0 リファレンスマニュアル)](https://docs.ruby-lang.org/ja/latest/doc/spec=2foperator.html)
 
-[Ruby](http://d.hatena.ne.jp/keyword/Ruby)は式全体の真偽を決定するまで、左辺から順に式を評価します。  
+Rubyは式全体の真偽を決定するまで、左辺から順に式を評価します。  
 つまりは`super`（自分とまったく同じオブジェクトなら真）が偽であれば、`||`以降の内容が評価されることになります。
 
 ### コメントを眺めてみる
@@ -77,11 +77,11 @@ def ==(comparison_object)  super || (comparison_object.instance_of?(self.class) 
 
 いずれもこのメソッドでは`!id.nil?`が条件となっているので、必ずfalseがかえるということですかね。
 
-1つ目は、newしたばかりのレコードはidが[nil](http://d.hatena.ne.jp/keyword/nil)だから、  
-2つ目は`select`でカラムを指定する際に`id`を対象外とすると、`id`は[nil](http://d.hatena.ne.jp/keyword/nil)だから、ということでしょうか。
+1つ目は、newしたばかりのレコードはidがnilだから、  
+2つ目は`select`でカラムを指定する際に`id`を対象外とすると、`id`はnilだから、ということでしょうか。
 
 > Note also that destroying a record preserves its ID in the model instance, so deleted models are still comparable.  
-> また、レコードの削除はモデル[インスタンス](http://d.hatena.ne.jp/keyword/%A5%A4%A5%F3%A5%B9%A5%BF%A5%F3%A5%B9)のIDを保持するので、削除されたモデルはまだ比較可能であることにも注意してください。
+> また、レコードの削除はモデル$1のIDを保持するので、削除されたモデルはまだ比較可能であることにも注意してください。
 
 いまいちよくわからなかった箇所。結局`id`が残ってさえいれば、いつまでもtrueがか返すということでしょうか...🤔
 
@@ -92,5 +92,5 @@ book = Book.find(1)bookA = Book.find(1)book == bookA#=> truebook.deletebook == b
 ## まとめ
 
 - `ActiveRecord::core#==`は`id`同士を比較する
-- `id`が[nil](http://d.hatena.ne.jp/keyword/nil)の場合は、必ずfalseを返す
+- `id`がnilの場合は、必ずfalseを返す
 - `id`とクラスさえ合っていれば、他の値が違っていてもtrueを返す
