--- a/src/content/blog/20210810103733.md
+++ b/src/content/blog/20210810103733.md
@@ -16,7 +16,7 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20210810/2021081
 
 ## リーダブルコード 第1部を読みました
 
-<img alt="f:id:ikmbear:20210810103304p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20210810/20210810103304.png" title="" height="499" width="354" />
+ ![f:id:ikmbear:20210810103304p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20210810/20210810103304.png) 
 
 名著と名高い、リーダブルコードの第1部を読み終えたので気になった部分をまとめてみました✍️
 
@@ -32,11 +32,11 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20210810/2021081
 
 本文の中にもいろいろと書いてあるのですが、個人的に一番ビビッと来たのは冒頭に引用した言葉です。
 
-[SIer](http://d.hatena.ne.jp/keyword/SIer)で初めて[Java](http://d.hatena.ne.jp/keyword/Java)を触った時、プロダクトのコードが全く理解できなくて、既存のコードをずーっと読み続けている時期がありました。読んでいくと次第に法則性がわかるようになってきて、法則性がわかると自分でも書けるようになっていきました。これが私がプログラミングの面白さに触れた原体験の部分であるため、「読む」という部分には強く共感しました。
+SIerで初めてJavaを触った時、プロダクトのコードが全く理解できなくて、既存のコードをずーっと読み続けている時期がありました。読んでいくと次第に法則性がわかるようになってきて、法則性がわかると自分でも書けるようになっていきました。これが私がプログラミングの面白さに触れた原体験の部分であるため、「読む」という部分には強く共感しました。
 
 ## コードは読むもの→求められるのは論理性・国語力
 
-プログラミングというと、どうしても「このメソッドを使うとより短く書ける」「この記法を使うと[ワンライナー](http://d.hatena.ne.jp/keyword/%A5%EF%A5%F3%A5%E9%A5%A4%A5%CA%A1%BC)で書ける」といった部分を想起しがちですが、本書第1部で述べられているのはそういった[機械的](http://d.hatena.ne.jp/keyword/%B5%A1%B3%A3%C5%AA)なところではなく、もっと[有機](http://d.hatena.ne.jp/keyword/%CD%AD%B5%A1)的な、教科で言えば「国語」的なアプローチです。
+プログラミングというと、どうしても「このメソッドを使うとより短く書ける」「この記法を使うと$1で書ける」といった部分を想起しがちですが、本書第1部で述べられているのはそういった$1なところではなく、もっと$1的な、教科で言えば「国語」的なアプローチです。
 
 例えば「3章 誤解されない名前」には次のような一節があります。
 
@@ -48,7 +48,7 @@ IMAGE: https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20210810/2021081
 
 A→(method)の結果がBに特定できるのであればいいけれど、B以外のCが検討できたり、そもそもBに紐づかないことはNG。A→（method）→Bとなるように因果関係を正しく構築できているかを確認することで、わかりやすいメソッドにできるのではないでしょうか。
 
-<img alt="f:id:ikmbear:20210810103119p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20210810/20210810103119.png" title="" height="594" width="1106" />
+ ![f:id:ikmbear:20210810103119p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20210810/20210810103119.png) 
 
 これはちょうど学生時代に国語の問題で因果関係が正しくなるように線で結ぶ問題と同じようなものです。プログラミングは論理的思考が求められるといいますが、それはプログラムの流れだけではなくて、名前にも適用されるのかもな〜なんて考えました🤔
 
@@ -69,6 +69,6 @@ A→(method)の結果がBに特定できるのであればいいけれど、B以
 
 ## おわりに
 
-プログラミングといえば、[コンピュータサイエンス](http://d.hatena.ne.jp/keyword/%A5%B3%A5%F3%A5%D4%A5%E5%A1%BC%A5%BF%A5%B5%A5%A4%A5%A8%A5%F3%A5%B9)や[アルゴリズム](http://d.hatena.ne.jp/keyword/%A5%A2%A5%EB%A5%B4%A5%EA%A5%BA%A5%E0)力などが重要なイメージですが、本書 第1部ではそれよりも論理力・国語力が重要である印象を受けました。
+プログラミングといえば、$1や$1力などが重要なイメージですが、本書 第1部ではそれよりも論理力・国語力が重要である印象を受けました。
 
 私は文系かつ就職してからプログラミングに出会った人間なので、いわゆるプログラミング的な素養は乏しいですが、これまで経済・経営（社会科学）に向き合うことで培ってきた姿勢を生かして、リーダブルなコードを書けるように精進していきたいと思います。
