--- a/src/content/blog/202203031646265181.md
+++ b/src/content/blog/202203031646265181.md
@@ -16,11 +16,11 @@ description: "【Rails】collection_selectで表示するテキストには、Pr
 
 自分で作ったGem「jp_local_gov」を使って、自作サービスを実装しています。
 
-<img alt="f:id:ikmbear:20220303082449p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220303/20220303082449.png" title="" height="526" width="689" />
+ ![f:id:ikmbear:20220303082449p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220303/20220303082449.png) 
 
 実装にあたって、市区町村名のセレクトボックスが必要でした。
 
-`jp_local_gov`では[View Template](https://github.com/IkumaTadokoro/jp_local_gov#view-template)に記載の通り、`collection_select`で使用する候補を返すことを目的の一つとした`JpLocalGov.all`という[API](http://d.hatena.ne.jp/keyword/API)を実装しているので、一見以下の形式で目的は達成できそうです。
+`jp_local_gov`では[View Template](https://github.com/IkumaTadokoro/jp_local_gov#view-template)に記載の通り、`collection_select`で使用する候補を返すことを目的の一つとした`JpLocalGov.all`というAPIを実装しているので、一見以下の形式で目的は達成できそうです。
 
 ```
 f.collection_select :local_gov_code, JpLocalGov.all, :code, :city
@@ -28,27 +28,27 @@ f.collection_select :local_gov_code, JpLocalGov.all, :code, :city
 
 たしかにこれでも動作としては問題ないのですが、`city`としか指定していないので、「市区町村名」しか表示されません。
 
-日本には「[都道](http://d.hatena.ne.jp/keyword/%C5%D4%C6%BB)府県は異なるけど、市区町村名が同じ市区町村」がそこそこ存在します。
+日本には「$1府県は異なるけど、市区町村名が同じ市区町村」がそこそこ存在します。
 
 ```
 JpLocalGov.all.group_by(&:city).select { |k, v| v.size > 1 }.map { |k, v| { k => v.map(&:prefecture) }}=>[{"伊達市"=>["北海道", "福島県"]}, {"松前町"=>["北海道", "愛媛県"]}, {"森町"=>["北海道", "静岡県"]},...
 ```
 
-そのため、[都道](http://d.hatena.ne.jp/keyword/%C5%D4%C6%BB)府県と市区町村を合わせてテキストに表示したかったので、雑に以下のようにやってみたのですが動かず。
+そのため、$1府県と市区町村を合わせてテキストに表示したかったので、雑に以下のようにやってみたのですが動かず。
 
 ```
 f.collection_select :local_gov_code, JpLocalGov.all, :code, "#{prefecture}#{:city}"
 ```
 
-## collection_selectで表示する[value](http://d.hatena.ne.jp/keyword/value)とtextにはProcを指定できる
+## collection_selectで表示するvalueとtextにはProcを指定できる
 
 <iframe src="https://hatenablog-parts.com/embed?url=https%3A%2F%2Fapi.rubyonrails.org%2Fclasses%2FActionView%2FHelpers%2FFormOptionsHelper.html%23method-i-collection_select" title="ActionView::Helpers::FormOptionsHelper" class="embed-card embed-webcard" scrolling="no" frameborder="0" style="display: block; width: 100%; height: 155px; max-width: 500px; margin: 10px 0px;"></iframe>
 
 > [api.rubyonrails.org](https://api.rubyonrails.org/classes/ActionView/Helpers/FormOptionsHelper.html#method-i-collection_select)
 
-困った時の[API](http://d.hatena.ne.jp/keyword/API) Dockというわけでチェックしてみると、
+困った時のAPI Dockというわけでチェックしてみると、
 
-> The :[value](http://d.hatena.ne.jp/keyword/value)\_method and :text_method parameters are methods to be called on each member of collection. The return values are used as the [value](http://d.hatena.ne.jp/keyword/value) attribute and contents of each tag, respectively. They can also be any object that responds to call, such as a proc, that will be called for each member of the collection to retrieve the value/text.
+> The :value\_method and :text_method parameters are methods to be called on each member of collection. The return values are used as the value attribute and contents of each tag, respectively. They can also be any object that responds to call, such as a proc, that will be called for each member of the collection to retrieve the value/text.
 
 要はcollection_selectの第1引数に指定したオブジェクトが対応できるメソッドを呼び出すことができ、それゆえにProcも呼び出せるようです。
 
@@ -60,4 +60,4 @@ f.collection_select :local_gov_code, JpLocalGov.all, :code, ->(lg) { "#{lg.prefe
 
 こんな感じにProcを渡してあげると、`JpLocaGov.all`で取得されたすべての市区町村がイテレーションされて`lg`にわたり、それぞれの「都道府県名 市区町村名」として表示できるわけです。
 
-<img alt="f:id:ikmbear:20220303085115p:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220303/20220303085115.png" title="" height="377" width="221" />
+ ![f:id:ikmbear:20220303085115p:plain](https://cdn-ak.f.st-hatena.com/images/fotolife/i/ikmbear/20220303/20220303085115.png) 
